deploy: 44ea01874e7307aec4631a5abe4a4091d7a2454f

--- a/contrib_modules/cas/cas.html
+++ b/contrib_modules/cas/cas.html
@@ -92,7 +92,7 @@
 </h1>
 <p>
  This is completely based on the original cas authentication,
-the only diffrence is this is authentication module and not a script.
+the only difference is this is authentication module and not a script.
 </p>
 <h2 id="setting-up-the-cas-authentication-module">
  Setting up the CAS authentication module
