--- a/contrib_modules/casserver/ChangeLog.html
+++ b/contrib_modules/casserver/ChangeLog.html
@@ -87,209 +87,374 @@
  </nav>
  <div id="content">
  </div>
-</header><main><p>
- /*
- <em>
-  *    SimpleSAMLphp-casserver is a CAS 1.0 and 2.0 compliant CAS server
- *    in the form of a simpleSAMLphp module
- *
- *    Copyright (C) 2013  Bjorn R. Jensen
- </em>
- /
-</p>
+</header><main><h1 id="simplesamlphp-module-casserver-changelog">
+ simplesamlphp-module-casserver changelog
+</h1>
 <p>
  Unreleased
-  * Allow certain authproc filters to be used in configuration
-  * Support method parameter at login
-  * Improve handling of invalid xml element names for attributes
-  * Minimum supported simplesamlphp version bumped to 1.17
-  * debugMode option to display cas ticket xml
-  * Allow per service overriding of configuration options for www/login
 </p>
+<ul>
+ <li>
+  Allow certain authproc filters to be used in configuration
+ </li>
+ <li>
+  Support method parameter at login
+ </li>
+ <li>
+  Improve handling of invalid xml element names for attributes
+ </li>
+ <li>
+  Minimum supported simplesamlphp version bumped to 1.17
+ </li>
+ <li>
+  debugMode option to display cas ticket xml
+ </li>
+ <li>
+  Allow per service overriding of configuration options for www/login
+ </li>
+</ul>
 <p>
  2018-07-20 Bjorn Rohde Jensen
-  * Release 6.1.0
-  * Minimum supported simplesamlphp version bumped to 1.15.
-  * Fixed some deprecation warnings by using namespaces to refer to the
-    relevant classes.
-  * Added support for using Redis as a ticket store.
 </p>
+<ul>
+ <li>
+  Release 6.1.0
+ </li>
+ <li>
+  Minimum supported simplesamlphp version bumped to 1.15.
+ </li>
+ <li>
+  Fixed some deprecation warnings by using namespaces to refer to the
+  relevant classes.
+ </li>
+ <li>
+  Added support for using Redis as a ticket store.
+ </li>
+</ul>
 <p>
  2016-08-01 Bjorn Rohde Jensen
-  * Release 6.0.0
-  * Renamed module from sbcasserver to casserver.
-  * Added composer file to make module installable according to
-    simplesamlphp guidelines.
-  * Replaced use of deprecated SimpleSAMLphp api's.
-  * Fixed a bug when comparing service url parameter to ticket service url,
-    which caused service urls with %20 encoded spaces to fail verification.
 </p>
+<ul>
+ <li>
+  Release 6.0.0
+ </li>
+ <li>
+  Renamed module from sbcasserver to casserver.
+ </li>
+ <li>
+  Added composer file to make module installable according to
+  simplesamlphp guidelines.
+ </li>
+ <li>
+  Replaced use of deprecated SimpleSAMLphp api's.
+ </li>
+ <li>
+  Fixed a bug when comparing service url parameter to ticket service url,
+  which caused service urls with %20 encoded spaces to fail verification.
+ </li>
+</ul>
 <p>
  2014-10-15 Bjørn Rohde Jensen
  <a href="mailto/brj@statsbiblioteket.dk.html">
   brj@statsbiblioteket.dk
  </a>
- * Release 5.2.3
-  * Added a missing linefeed character in the CAS 1.0 ticket validation
-    failure response.
 </p>
+<ul>
+ <li>
+  Release 5.2.3
+ </li>
+ <li>
+  Added a missing linefeed character in the CAS 1.0 ticket validation
+  failure response.
+ </li>
+</ul>
 <p>
  2014-03-17 Bjørn Rohde Jensen
  <a href="mailto/brj@statsbiblioteket.dk.html">
   brj@statsbiblioteket.dk
  </a>
- * Release 5.2.2
-  * Fixed a bug where the sanitized forms of url parameters were used for
-    more than validation.
-  * Fixed a bug in the sanitizer logic to remove ';jsessionid' from urls.
 </p>
+<ul>
+ <li>
+  Release 5.2.2
+ </li>
+ <li>
+  Fixed a bug where the sanitized forms of url parameters were used for
+  more than validation.
+ </li>
+ <li>
+  Fixed a bug in the sanitizer logic to remove ';jsessionid' from urls.
+ </li>
+</ul>
 <p>
  2014-02-27 Bjørn Rohde Jensen
  <a href="mailto/brj@statsbiblioteket.dk.html">
   brj@statsbiblioteket.dk
  </a>
- * Release 5.2.1
-  * Fixed a bug where attributes containing colons in their names caused
-    serviceValidate to return invalid xml.
 </p>
+<ul>
+ <li>
+  Release 5.2.1
+ </li>
+ <li>
+  Fixed a bug where attributes containing colons in their names caused
+  serviceValidate to return invalid xml.
+ </li>
+</ul>
 <p>
  2014-02-25 Bjørn Rohde Jensen
  <a href="mailto/brj@statsbiblioteket.dk.html">
   brj@statsbiblioteket.dk
  </a>
- * Release 5.2.0
-  * Removed hardcoded removal of attributes starting with urn:oid.
-  * Added a logged in landing page in case the client does not provide
-    a service url.
-  * It is now possible to add an attribute indicating whether the attributes
-    are base64 encoded or not.
 </p>
+<ul>
+ <li>
+  Release 5.2.0
+ </li>
+ <li>
+  Removed hardcoded removal of attributes starting with urn:oid.
+ </li>
+ <li>
+  Added a logged in landing page in case the client does not provide
+  a service url.
+ </li>
+ <li>
+  It is now possible to add an attribute indicating whether the attributes
+  are base64 encoded or not.
+ </li>
+</ul>
 <p>
  2014-02-07 Bjørn Rohde Jensen
  <a href="mailto/brj@statsbiblioteket.dk.html">
   brj@statsbiblioteket.dk
  </a>
- * Release 5.1.0
-  * Fixed a bug where the 'url' parameter was required even when displaying
-    a logged out page.
-  * Fixed a bug where attribute transfer could not be disabled.
-  * Added support for specifying which attributes to transfer.
-  * Added support for specifying a named subset of IdPs allowing clients to
-    restrict the list of IdPs in the wayf step.
 </p>
+<ul>
+ <li>
+  Release 5.1.0
+ </li>
+ <li>
+  Fixed a bug where the 'url' parameter was required even when displaying
+  a logged out page.
+ </li>
+ <li>
+  Fixed a bug where attribute transfer could not be disabled.
+ </li>
+ <li>
+  Added support for specifying which attributes to transfer.
+ </li>
+ <li>
+  Added support for specifying a named subset of IdPs allowing clients to
+  restrict the list of IdPs in the wayf step.
+ </li>
+</ul>
 <p>
  2013-11-04 Bjørn Rohde Jensen
  <a href="mailto/brj@statsbiblioteket.dk.html">
   brj@statsbiblioteket.dk
  </a>
- * Release 5.0.0
-  * Removed support for storing tickets in proprietary key-value
-    store AttributeStore.
-  * Added support for storing tickets in a SQL database.
-  * Added support for storing tickets in memcached.
-  * Added support for proxy tickets.
-  * Added support for renewing login.
-  * Added an optional logged out landing page with a return url.
-  * Added support for specifying an idp during login thus skipping the
-    wayf step.
-  * Added support for specifying a language hint during login.
 </p>
+<ul>
+ <li>
+  Release 5.0.0
+ </li>
+ <li>
+  Removed support for storing tickets in proprietary key-value
+  store AttributeStore.
+ </li>
+ <li>
+  Added support for storing tickets in a SQL database.
+ </li>
+ <li>
+  Added support for storing tickets in memcached.
+ </li>
+ <li>
+  Added support for proxy tickets.
+ </li>
+ <li>
+  Added support for renewing login.
+ </li>
+ <li>
+  Added an optional logged out landing page with a return url.
+ </li>
+ <li>
+  Added support for specifying an idp during login thus skipping the
+  wayf step.
+ </li>
+ <li>
+  Added support for specifying a language hint during login.
+ </li>
+</ul>
 <p>
  2013-01-29 Bjørn Rohde Jensen
  <a href="mailto/brj@statsbiblioteket.dk.html">
   brj@statsbiblioteket.dk
  </a>
- * Release 4.0.0
-  * Moved all filters to a dedicated project.
-  * Moved theme related code into the sbthemes project.
-  * Added an abstract cas ticket store with concrete subclasses to store
-    tickets locally or in the attribute store.
-  * Changed cas 2.0 response generation from hand coded to using
-    php dom document.
-  * Fixed a bug in cas 1.0 response generation, where yes/no was
-    returned in upper case.
 </p>
+<ul>
+ <li>
+  Release 4.0.0
+ </li>
+ <li>
+  Moved all filters to a dedicated project.
+ </li>
+ <li>
+  Moved theme related code into the sbthemes project.
+ </li>
+ <li>
+  Added an abstract cas ticket store with concrete subclasses to store
+  tickets locally or in the attribute store.
+ </li>
+ <li>
+  Changed cas 2.0 response generation from hand coded to using
+  php dom document.
+ </li>
+ <li>
+  Fixed a bug in cas 1.0 response generation, where yes/no was
+  returned in upper case.
+ </li>
+</ul>
 <p>
  2012-10-31 Bjørn Rohde Jensen
  <a href="mailto/brj@statsbiblioteket.dk.html">
   brj@statsbiblioteket.dk
  </a>
- * release 3.3.0
-  * IPRoleMapper can now be configured to add its roles to any given attribute
-    by setting the filter parameter 'targetAttributeName'.
 </p>
+<ul>
+ <li>
+  release 3.3.0
+ </li>
+ <li>
+  IPRoleMapper can now be configured to add its roles to any given attribute
+  by setting the filter parameter 'targetAttributeName'.
+ </li>
+</ul>
 <p>
  2012-10-24 Bjørn Rohde Jensen
  <a href="mailto/brj@statsbiblioteket.dk.html">
   brj@statsbiblioteket.dk
  </a>
- * release 3.2
-  * Added AttributeCollector auth filter for collecting attributes from
-    the attribute store.
-  * Added CAS logout
 </p>
+<ul>
+ <li>
+  release 3.2
+ </li>
+ <li>
+  Added AttributeCollector auth filter for collecting attributes from
+  the attribute store.
+ </li>
+ <li>
+  Added CAS logout
+ </li>
+</ul>
 <p>
  2012-05-22  Per Møldrup-Dalum
  <a href="mailto/pdj@statsbiblioteket.dk.html">
   pdj@statsbiblioteket.dk
  </a>
- * release 3.1
-  * Corrected a spelling bug
 </p>
+<ul>
+ <li>
+  release 3.1
+ </li>
+ <li>
+  Corrected a spelling bug
+ </li>
+</ul>
 <p>
  2012-05-08  Per Møldrup-Dalum
  <a href="mailto/pdj@statsbiblioteket.dk.html">
   pdj@statsbiblioteket.dk
  </a>
- * Release 3
-  * Added the Statsbiblioteket theme from sbdisco
-  * Added the IP role mapper from sbdisco
 </p>
+<ul>
+ <li>
+  Release 3
+ </li>
+ <li>
+  Added the Statsbiblioteket theme from sbdisco
+ </li>
+ <li>
+  Added the IP role mapper from sbdisco
+ </li>
+</ul>
 <p>
  2011-10-31  Per Møldrup-Dalum
  <a href="mailto/pdj@statsbiblioteket.dk.html">
   pdj@statsbiblioteket.dk
  </a>
- * Release 2.3
-  * Added a hack to keep compatibility with the eduPersonNIN attribute.
 </p>
+<ul>
+ <li>
+  Release 2.3
+ </li>
+ <li>
+  Added a hack to keep compatibility with the eduPersonNIN attribute.
+ </li>
+</ul>
 <p>
  2011-03-29  Per Møldrup-Dalum
  <a href="mailto/pdj@statsbiblioteket.dk.html">
   pdj@statsbiblioteket.dk
  </a>
- * Release 2.2
-  * Reintroduced ignore urn:oid attributes.
-  * Added configurable base 64 encoding of attribute values.
-  * Removed debug messages.
-  * Changed the casserver to use the configured auth source.
 </p>
+<ul>
+ <li>
+  Release 2.2
+ </li>
+ <li>
+  Reintroduced ignore urn:oid attributes.
+ </li>
+ <li>
+  Added configurable base 64 encoding of attribute values.
+ </li>
+ <li>
+  Removed debug messages.
+ </li>
+ <li>
+  Changed the casserver to use the configured auth source.
+ </li>
+</ul>
 <p>
  2011-01-18  Per Møldrup-Dalum
  <a href="mailto/pdj@statsbiblioteket.dk.html">
   pdj@statsbiblioteket.dk
  </a>
- * Changed default from disabled to enabled
 </p>
+<ul>
+ <li>
+  Changed default from disabled to enabled
+ </li>
+</ul>
 <p>
  2011-01-17  Per Møldrup-Dalum
  <a href="mailto/pdj@statsbiblioteket.dk.html">
   pdj@statsbiblioteket.dk
  </a>
- * Creating release 2.0
-  * All files are rewritten based on work by Dubravko Voncina. See Google
-    Groups discussion in this thread:
- <code>
-  http://groups.google.com/group/simplesamlphp/browse_thread/thread/4c655d169532650a
- </code>
- * Creating release 2.1
-    The sbcasserver module now uses its own "namespace" instead of
-    hi-jacking the casserver "namespace". Therefore the
- <code>
-  config-templates/module_casserver.php
- </code>
- has been renamed to
-    module_sbcasserver.php
-  * The files in www has all beed changed to use the new "namespace".
-</p></main></body>
+</p>
+<ul>
+ <li>
+  Creating release 2.0
+ </li>
+ <li>
+  All files are rewritten based on work by Dubravko Voncina. See Google
+  Groups discussion in this thread:
+  <code>
+   http://groups.google.com/group/simplesamlphp/browse_thread/thread/4c655d169532650a
+  </code>
+ </li>
+ <li>
+  Creating release 2.1
+  The sbcasserver module now uses its own "namespace" instead of
+  hi-jacking the casserver "namespace". Therefore the
+  <code>
+   config-templates/module_casserver.php
+  </code>
+  has been renamed to
+  module_sbcasserver.php
+ </li>
+ <li>
+  The files in www has all beed changed to use the new "namespace".
+ </li>
+</ul></main></body>
 </html>
