--- a/contrib_modules/consent/consent.html
+++ b/contrib_modules/consent/consent.html
@@ -200,7 +200,7 @@ cookies as storage you need to set the
 </div>
 <p>
  If necessary, you can set the cookie parameters in the config array using the
-same sematics as other cookies (default values shown):
+same semantics as other cookies (default values shown):
 </p>
 <div class="codehilite">
  <pre><span></span><code><span class="x">90 =&gt; [</span>
