--- a/contrib_modules/metarefresh/simplesamlphp-automated_metadata.html
+++ b/contrib_modules/metarefresh/simplesamlphp-automated_metadata.html
@@ -533,7 +533,7 @@ config.php file, and modify the
  <em>
   may
  </em>
- need to adjust the below php.ini setings if the metadata files you consume are quite large.
+ need to adjust the below php.ini settings if the metadata files you consume are quite large.
 </p>
 <ul>
  <li>
