--- a/contrib_modules/radius/radius.html
+++ b/contrib_modules/radius/radius.html
@@ -192,7 +192,7 @@ for the
 <span class="x">        'realm' =&gt; 'example.edu',</span>
 
 <span class="x">        /*</span>
-<span class="x">         * The attribute name we should store the username in. Ths username</span>
+<span class="x">         * The attribute name we should store the username in. This username</span>
 <span class="x">         * will not be saved in any attribute if this is NULL.</span>
 <span class="x">         * Optional, defaults to NULL.</span>
 <span class="x">         */</span>
