--- a/devel/core/authproc_languageadaptor.html
+++ b/devel/core/authproc_languageadaptor.html
@@ -157,7 +157,7 @@ Now, the LanguageAdaptor will read the preferred language from the cookie and ad
 </code></pre>
 </div>
 <p>
- Custon attribute:
+ Custom attribute:
 </p>
 <div class="codehilite">
  <pre><span></span><code>  'authproc' =&gt; [
