--- a/devel/saml/keyrollover.html
+++ b/devel/saml/keyrollover.html
@@ -134,9 +134,12 @@ If you are changing the keys for both an service provider and identity provider 
 The metadata will be updated to list the new key for signing and encryption, and the old key will no longer listed as available for encryption.
 This ensures that both those entities that use your old metadata and those that use your new metadata will be able to send and receive messages from you.
 </p>
-<h3 id="examples">
- Examples
-</h3>
+<p>
+ <strong>
+  Examples
+ </strong>
+ :
+</p>
 <p>
  In
  <code>
@@ -227,9 +230,12 @@ Replace the existing
  options.
 This will cause your old key to be removed from your metadata.
 </p>
-<h3 id="examples_1">
- Examples
-</h3>
+<p>
+ <strong>
+  Examples
+ </strong>
+ :
+</p>
 <p>
  In
  <code>
