--- a/devel/saml/nameid.html
+++ b/devel/saml/nameid.html
@@ -158,9 +158,12 @@
 <p>
  Uses the value of an attribute to generate a NameID.
 </p>
-<h3 id="options">
- Options
-</h3>
+<p>
+ <strong>
+  Options
+ </strong>
+ :
+</p>
 <dl>
  <dt>
   <code>
@@ -209,9 +212,12 @@ The filter will take the user ID from the attribute described in the
  , and the SP and IdP entity ID.
 The resulting hash is sent as the persistent NameID.
 </p>
-<h3 id="options_1">
- Options
-</h3>
+<p>
+ <strong>
+  Options
+ </strong>
+ :
+</p>
 <dl>
  <dt>
   <code>
@@ -263,9 +269,12 @@ See the
  </code>
  .
 </p>
-<h3 id="options_2">
- Options
-</h3>
+<p>
+ <strong>
+  Options
+ </strong>
+ :
+</p>
 <dl>
  <dt>
   <code>
@@ -388,9 +397,12 @@ This can be used to set the
  </code>
  -attribute to the same value as the persistent NameID.
 </p>
-<h3 id="options_3">
- Options
-</h3>
+<p>
+ <strong>
+  Options
+ </strong>
+ :
+</p>
 <dl>
  <dt>
   <code>
@@ -419,9 +431,12 @@ This can be used to set the
   .
  </dd>
 </dl>
-<h2 id="example">
- Example
-</h2>
+<p>
+ <strong>
+  Example
+ </strong>
+ :
+</p>
 <p>
  This example makes three NameIDs available:
 </p>
