--- a/devel/simplesamlphp-advancedfeatures.html
+++ b/devel/simplesamlphp-advancedfeatures.html
@@ -106,6 +106,13 @@
      <a href="#bridging-between-protocols">
       Bridging between protocols
      </a>
+     <ul>
+      <li>
+       <a href="#example-of-bridge-configuration">
+        Example of bridge configuration
+       </a>
+      </li>
+     </ul>
     </li>
     <li>
      <a href="#attribute-control">
@@ -175,11 +182,9 @@ The SAML 2.0 SP talks to the SAML 2.0 IdP, which hands the request over to the S
 <p>
  If you have followed the instructions for setting up an SP, and have configured an authentication source, all you need to do is to add that authentication source to the IdP.
 </p>
-<p>
- <strong>
-  Example of bridge configuration
- </strong>
-</p>
+<h3 id="example-of-bridge-configuration">
+ Example of bridge configuration
+</h3>
 <p>
  In
  <code>
@@ -188,7 +193,7 @@ The SAML 2.0 SP talks to the SAML 2.0 IdP, which hands the request over to the S
  :
 </p>
 <div class="codehilite">
- <pre><span></span><code>  'auth' =&gt; 'default-sp',
+ <pre><span></span><code><span class="x">'auth' =&gt; 'default-sp',</span>
 </code></pre>
 </div>
 <p>
@@ -199,9 +204,9 @@ The SAML 2.0 SP talks to the SAML 2.0 IdP, which hands the request over to the S
  :
 </p>
 <div class="codehilite">
- <pre><span></span><code>  'default-sp' =&gt; [
-      'saml:SP',
-  ],
+ <pre><span></span><code><span class="x">'default-sp' =&gt; [</span>
+<span class="x">    'saml:SP',</span>
+<span class="x">],</span>
 </code></pre>
 </div>
 <h2 id="attribute-control">
@@ -214,10 +219,13 @@ The SAML 2.0 SP talks to the SAML 2.0 IdP, which hands the request over to the S
  </em>
  . For more information, read:
 </p>
-<div class="codehilite">
- <pre><span></span><code>* [Authentication Processing Filters in SimpleSAMLphp](simplesamlphp-authproc)
-</code></pre>
-</div>
+<ul>
+ <li>
+  <a href="simplesamlphp-authproc.html">
+   Authentication Processing Filters in SimpleSAMLphp
+  </a>
+ </li>
+</ul>
 <h2 id="automatic-update-of-saml-20-metadata-xml-from-https">
  Automatic update of SAML 2.0 Metadata XML from HTTPS
 </h2>
@@ -303,15 +311,37 @@ Please see the
    metadata.sign.algorithm
   </code>
   : The algorithm to use when signing metadata for this entity. Defaults to RSA-SHA256. Possible values:
-  <div class="codehilite">
-   <pre><span></span><code>* `http://www.w3.org/2000/09/xmldsig#rsa-sha1`
-   *Note*: the use of SHA1 is **deprecated** and will be disallowed in the future.
-* `http://www.w3.org/2001/04/xmldsig-more#rsa-sha256`
-  The default.
-* `http://www.w3.org/2001/04/xmldsig-more#rsa-sha384`
-* `http://www.w3.org/2001/04/xmldsig-more#rsa-sha512`
-</code></pre>
-  </div>
+  <ul>
+   <li>
+    <code>
+     http://www.w3.org/2000/09/xmldsig#rsa-sha1
+    </code>
+    <em>
+     Note
+    </em>
+    : the use of SHA1 is
+    <strong>
+     deprecated
+    </strong>
+    and will be disallowed in the future.
+   </li>
+   <li>
+    <code>
+     http://www.w3.org/2001/04/xmldsig-more#rsa-sha256
+    </code>
+    The default.
+   </li>
+   <li>
+    <code>
+     http://www.w3.org/2001/04/xmldsig-more#rsa-sha384
+    </code>
+   </li>
+   <li>
+    <code>
+     http://www.w3.org/2001/04/xmldsig-more#rsa-sha512
+    </code>
+   </li>
+  </ul>
  </li>
 </ul>
 <p>
@@ -354,44 +384,55 @@ Please see the
  Example code for the function with GeoIP country check:
 </p>
 <div class="codehilite">
- <pre><span></span><code><span class="w">  </span><span class="nt">public</span><span class="w"> </span><span class="nt">static</span><span class="w"> </span><span class="nt">function</span><span class="w"> </span><span class="nt">checkSession</span><span class="o">($</span><span class="nt">session</span><span class="o">,</span><span class="w"> </span><span class="o">$</span><span class="nt">init</span><span class="w"> </span><span class="o">=</span><span class="w"> </span><span class="nt">FALSE</span><span class="o">)</span><span class="w"> </span><span class="p">{</span><span class="w"></span>
-<span class="w">      </span><span class="err">$data_type</span><span class="w"> </span><span class="err">=</span><span class="w"> </span><span class="err">'</span><span class="n">example</span><span class="p">:</span><span class="n">check_session</span><span class="s1">';</span>
-<span class="s1">      $data_key = '</span><span class="n">remote_addr</span><span class="s1">';</span>
+ <pre><span></span><code><span class="x">public static function checkSession($session, $init = false)</span>
+<span class="x">{</span>
+<span class="x">    $data_type = 'example:check_session';</span>
+<span class="x">    $data_key = 'remote_addr';</span>
 
-<span class="s1">      $remote_addr = NULL;</span>
-<span class="s1">      if (!empty($_SERVER</span><span class="cp">[</span><span class="s1">'REMOTE_ADDR'</span><span class="cp">]</span><span class="s1">)) {</span>
-<span class="s1">          $remote_addr = (string)$_SERVER</span><span class="cp">[</span><span class="s1">'REMOTE_ADDR'</span><span class="cp">]</span><span class="s1">;</span>
-<span class="s1">      }</span>
+<span class="x">    $remote_addr = null;</span>
+<span class="x">    if (!empty($_SERVER['REMOTE_ADDR'])) {</span>
+<span class="x">        $remote_addr = (string)$_SERVER['REMOTE_ADDR'];</span>
+<span class="x">    }</span>
 
-<span class="s1">      if ($init) {</span>
-<span class="s1">          $session-&gt;setData($data_type, $data_key, $remote_addr, \SimpleSAML\Session::DATA_TIMEOUT_SESSION_END);</span>
-<span class="s1">          return;</span>
-<span class="s1">      }</span>
+<span class="x">    if ($init) {</span>
+<span class="x">        $session-&gt;setData(</span>
+<span class="x">            $data_type,</span>
+<span class="x">            $data_key,</span>
+<span class="x">            $remote_addr,</span>
+<span class="x">            \SimpleSAML\Session::DATA_TIMEOUT_SESSION_END</span>
+<span class="x">        );</span>
+<span class="x">        return;</span>
+<span class="x">    }</span>
 
-<span class="s1">      if (!function_exists('</span><span class="n">geoip_country_code_by_name</span><span class="s1">')) {</span>
-<span class="s1">          SimpleSAML\Logger::warning('</span><span class="n">geoip</span><span class="w"> </span><span class="n">php</span><span class="w"> </span><span class="n">module</span><span class="w"> </span><span class="n">required</span><span class="o">.</span><span class="s1">');</span>
-<span class="s1">          return TRUE;</span>
-<span class="s1">      }</span>
+<span class="x">    if (!function_exists('geoip_country_code_by_name')) {</span>
+<span class="x">        \SimpleSAML\Logger::warning('geoip php module required.');</span>
+<span class="x">        return true;</span>
+<span class="x">    }</span>
 
-<span class="s1">      $stored_remote_addr = $session-&gt;getData($data_type, $data_key);</span>
-<span class="s1">      if ($stored_remote_addr === NULL) {</span>
-<span class="s1">          SimpleSAML\Logger::warning('</span><span class="n">Stored</span><span class="w"> </span><span class="n">data</span><span class="w"> </span><span class="n">not</span><span class="w"> </span><span class="n">found</span><span class="o">.</span><span class="err">'</span><span class="p">);</span><span class="w"></span>
-<span class="w">          </span><span class="err">return</span><span class="w"> </span><span class="err">FALSE</span><span class="p">;</span><span class="w"></span>
-<span class="w">      </span><span class="p">}</span><span class="w"></span>
+<span class="x">    $stored_remote_addr = $session-&gt;getData($data_type, $data_key);</span>
+<span class="x">    if ($stored_remote_addr === null) {</span>
+<span class="x">        \SimpleSAML\Logger::warning('Stored data not found.');</span>
+<span class="x">        return false;</span>
+<span class="x">    }</span>
 
-<span class="w">      </span><span class="o">$</span><span class="nt">country_a</span><span class="w"> </span><span class="o">=</span><span class="w"> </span><span class="nt">geoip_country_code_by_name</span><span class="o">($</span><span class="nt">remote_addr</span><span class="o">);</span><span class="w"></span>
-<span class="w">      </span><span class="o">$</span><span class="nt">country_b</span><span class="w"> </span><span class="o">=</span><span class="w"> </span><span class="nt">geoip_country_code_by_name</span><span class="o">($</span><span class="nt">stored_remote_addr</span><span class="o">);</span><span class="w"></span>
+<span class="x">    $country_a = geoip_country_code_by_name($remote_addr);</span>
+<span class="x">    $country_b = geoip_country_code_by_name($stored_remote_addr);</span>
 
-<span class="w">      </span><span class="nt">if</span><span class="w"> </span><span class="o">($</span><span class="nt">country_a</span><span class="w"> </span><span class="o">===</span><span class="w"> </span><span class="o">$</span><span class="nt">country_b</span><span class="o">)</span><span class="w"> </span><span class="p">{</span><span class="w"></span>
-<span class="w">          </span><span class="err">if</span><span class="w"> </span><span class="err">($stored_remote_addr</span><span class="w"> </span><span class="err">!==</span><span class="w"> </span><span class="err">$remote_addr)</span><span class="w"> </span><span class="err">{</span><span class="w"></span>
-<span class="w">              </span><span class="err">$session-&gt;setData($data_type,</span><span class="w"> </span><span class="err">$data_key,</span><span class="w"> </span><span class="err">$remote_addr,</span><span class="w"> </span><span class="err">\SimpleSAML\</span><span class="n">Session</span><span class="p">:</span><span class="o">:</span><span class="n">DATA_TIMEOUT_SESSION_END</span><span class="p">);</span><span class="w"></span>
-<span class="w">          </span><span class="p">}</span><span class="w"></span>
+<span class="x">    if ($country_a === $country_b) {</span>
+<span class="x">        if ($stored_remote_addr !== $remote_addr) {</span>
+<span class="x">            $session-&gt;setData(</span>
+<span class="x">                $data_type,</span>
+<span class="x">                $data_key,</span>
+<span class="x">                $remote_addr,</span>
+<span class="x">                \SimpleSAML\Session::DATA_TIMEOUT_SESSION_END</span>
+<span class="x">            );</span>
+<span class="x">        }</span>
 
-<span class="w">          </span><span class="nt">return</span><span class="w"> </span><span class="nt">TRUE</span><span class="o">;</span><span class="w"></span>
-<span class="w">      </span><span class="err">}</span><span class="w"></span>
+<span class="x">        return true;</span>
+<span class="x">    }</span>
 
-<span class="w">      </span><span class="nt">return</span><span class="w"> </span><span class="nt">FALSE</span><span class="o">;</span><span class="w"></span>
-<span class="w">  </span><span class="err">}</span><span class="w"></span>
+<span class="x">    return false;</span>
+<span class="x">}</span>
 </code></pre>
 </div>
 <h2 id="support">
