--- a/devel/simplesamlphp-hok-idp.html
+++ b/devel/simplesamlphp-hok-idp.html
@@ -112,11 +112,11 @@ This certificate is usually selfsigned and stored in the certificate store of th
  The IdP requests a client certificate from the user agent during the TLS handshake. This behaviour is enabled with the following Apache webserver configuration:
 </p>
 <div class="codehilite">
- <pre><span></span><code>  SSLEngine on
-  SSLCertificateFile /etc/openssl/certs/server.crt
-  SSLCertificateKeyFile /etc/openssl/private/server.key
-  SSLVerifyClient optional_no_ca
-  SSLOptions +ExportCertData
+ <pre><span></span><code><span class="nb">SSLEngine</span><span class="w"> </span><span class="k">on</span><span class="w"></span>
+<span class="nb">SSLCertificateFile</span><span class="w"> </span><span class="sx">/etc/openssl/certs/server.crt</span><span class="w"></span>
+<span class="nb">SSLCertificateKeyFile</span><span class="w"> </span><span class="sx">/etc/openssl/private/server.key</span><span class="w"></span>
+<span class="nb">SSLVerifyClient</span><span class="w"> </span>optional_no_ca<span class="w"></span>
+<span class="nb">SSLOptions</span><span class="w"> </span>+ExportCertData<span class="w"></span>
 </code></pre>
 </div>
 <p>
@@ -142,11 +142,11 @@ environment variable
  metadata file:
 </p>
 <div class="codehilite">
- <pre><span></span><code><span class="w">  </span><span class="o">$</span><span class="nt">metadata</span><span class="cp">[</span><span class="s1">'https://example.org/saml-idp'</span><span class="cp">]</span><span class="w"> </span><span class="o">=</span><span class="w"> </span><span class="cp">[</span><span class="w"></span>
-<span class="w">      </span><span class="err">[</span><span class="nx">....</span><span class="cp">]</span><span class="w"></span>
-<span class="w">      </span><span class="s1">'auth'</span><span class="w"> </span><span class="o">=&gt;</span><span class="w"> </span><span class="s1">'example-userpass'</span><span class="o">,</span><span class="w"></span>
-<span class="w">      </span><span class="s1">'saml20.hok.assertion'</span><span class="w"> </span><span class="o">=&gt;</span><span class="w"> </span><span class="nt">TRUE</span><span class="o">,</span><span class="w"></span>
-<span class="w">  </span><span class="o">];</span><span class="w"></span>
+ <pre><span></span><code><span class="x">$metadata['https://example.org/saml-idp'] = [</span>
+<span class="x">    [....]</span>
+<span class="x">    'auth' =&gt; 'example-userpass',</span>
+<span class="x">    'saml20.hok.assertion' =&gt; true,</span>
+<span class="x">];</span>
 </code></pre>
 </div>
 <h2 id="add-new-metadata-to-sps">
@@ -166,17 +166,17 @@ The
  metadata for SimpleSAMLphp SPs should contain something like the following code:
 </p>
 <div class="codehilite">
- <pre><span></span><code>'SingleSignOnService' =&gt; array (
-  array (
-    'hoksso:ProtocolBinding' =&gt; 'urn:oasis:names:tc:SAML:2.0:bindings:HTTP-Redirect',
-    'Binding' =&gt; 'urn:oasis:names:tc:SAML:2.0:profiles:holder-of-key:SSO:browser',
-    'Location' =&gt; 'https://idp.example.org/simplesaml/saml2/idp/SSOService.php',
-  ),
-  array (
-    'Binding' =&gt; 'urn:oasis:names:tc:SAML:2.0:bindings:HTTP-Redirect',
-    'Location' =&gt; 'https://idp.example.org/simplesaml/saml2/idp/SSOService.php',
-  ),
-),
+ <pre><span></span><code><span class="x">'SingleSignOnService' =&gt; [</span>
+<span class="x">    [</span>
+<span class="x">        'hoksso:ProtocolBinding' =&gt; 'urn:oasis:names:tc:SAML:2.0:bindings:HTTP-Redirect',</span>
+<span class="x">        'Binding' =&gt; 'urn:oasis:names:tc:SAML:2.0:profiles:holder-of-key:SSO:browser',</span>
+<span class="x">        'Location' =&gt; 'https://idp.example.org/simplesaml/saml2/idp/SSOService.php',</span>
+<span class="x">    ],</span>
+<span class="x">    [</span>
+<span class="x">        'Binding' =&gt; 'urn:oasis:names:tc:SAML:2.0:bindings:HTTP-Redirect',</span>
+<span class="x">        'Location' =&gt; 'https://idp.example.org/simplesaml/saml2/idp/SSOService.php',</span>
+<span class="x">    ],</span>
+<span class="x">],</span>
 </code></pre>
 </div>
 <h2 id="sp-metadata-on-the-idp">
@@ -196,18 +196,18 @@ This means that you have to use the complex endpoint format in
 In general, this should look like the following code:
 </p>
 <div class="codehilite">
- <pre><span></span><code>'AssertionConsumerService' =&gt; array (
-  [
-    'Binding' =&gt; 'urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST',
-    'Location' =&gt; 'https://sp.example.org/simplesaml/module.php/saml/sp/assertionConsumerService/default-sp',
-    'index' =&gt; 0,
-  ],
-  [
-    'Binding' =&gt; 'urn:oasis:names:tc:SAML:2.0:profiles:holder-of-key:SSO:browser',
-    'Location' =&gt; 'https://sp.example.org/simplesaml/module.php/saml/sp/assertionConsumerService/default-sp',
-    'index' =&gt; 4,
-  ],
-),
+ <pre><span></span><code><span class="x">'AssertionConsumerService' =&gt; [</span>
+<span class="x">    [</span>
+<span class="x">        'Binding' =&gt; 'urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST',</span>
+<span class="x">        'Location' =&gt; 'https://sp.example.org/simplesaml/module.php/saml/sp/assertionConsumerService/default-sp',</span>
+<span class="x">        'index' =&gt; 0,</span>
+<span class="x">    ],</span>
+<span class="x">    [</span>
+<span class="x">        'Binding' =&gt; 'urn:oasis:names:tc:SAML:2.0:profiles:holder-of-key:SSO:browser',</span>
+<span class="x">        'Location' =&gt; 'https://sp.example.org/simplesaml/module.php/saml/sp/assertionConsumerService/default-sp',</span>
+<span class="x">        'index' =&gt; 4,</span>
+<span class="x">    ],</span>
+<span class="x">],</span>
 </code></pre>
 </div>
 <p>
