--- a/devel/simplesamlphp-metadata-endpoints.html
+++ b/devel/simplesamlphp-metadata-endpoints.html
@@ -119,12 +119,17 @@
 <p>
  The various endpoints can be specified in three different ways:
 </p>
-<div class="codehilite">
- <pre><span></span><code>* A single string.
-* Array of strings.
-* Array of arrays.
-</code></pre>
-</div>
+<ul>
+ <li>
+  A single string.
+ </li>
+ <li>
+  Array of strings.
+ </li>
+ <li>
+  Array of arrays.
+ </li>
+</ul>
 <h2 id="a-single-string">
  A single string
 </h2>
