--- a/devel/simplesamlphp-sp.html
+++ b/devel/simplesamlphp-sp.html
@@ -424,7 +424,7 @@ redirected back to the test page.
 The test page should contain a list of your attributes:
 </p>
 <p>
- <img alt="Screenshot of the status page after a user has succesfully authenticated" src="resources/simplesamlphp-sp/screenshot-example.png"/>
+ <img alt="Screenshot of the status page after a user has successfully authenticated" src="resources/simplesamlphp-sp/screenshot-example.png"/>
 </p>
 <p>
  For a better looking, more advanced Discovery Service with tabs and live
