--- a/devel/simplesamlphp-translation.html
+++ b/devel/simplesamlphp-translation.html
@@ -87,194 +87,10 @@
  </nav>
  <div id="content">
  </div>
-</header><main><h1 id="simplesamlphp-translation-portal">
- SimpleSAMLphp Translation Portal
+</header><main><h1 id="simplesamlphp-translation">
+ SimpleSAMLphp Translation
 </h1>
-<!-- 
-    This file is written in Markdown syntax. 
-    For more information about how to use the Markdown syntax, read here:
-    http://daringfireball.net/projects/markdown/syntax
--->
-<div class="toc">
- <ul>
-  <li>
-   <a href="#simplesamlphp-translation-portal">
-    SimpleSAMLphp Translation Portal
-   </a>
-   <ul>
-    <li>
-     <a href="#how-translated-terms-are-referred-from-a-template">
-      How translated terms are referred from a template
-     </a>
-    </li>
-    <li>
-     <a href="#the-definition-file">
-      The definition file
-     </a>
-    </li>
-    <li>
-     <a href="#the-translation-file">
-      The translation file
-     </a>
-    </li>
-   </ul>
-  </li>
- </ul>
-</div>
-<h2 id="how-translated-terms-are-referred-from-a-template">
- How translated terms are referred from a template
-</h2>
 <p>
- Here is an example of how two terms are included in a template from dictionary files:
-</p>
-<div class="codehilite">
- <pre><span></span><code>  <span class="nt">&lt;h2&gt;</span><span class="cp">&lt;?php</span> <span class="k">echo</span> <span class="nv">$this</span><span class="o">-&gt;</span><span class="na">t</span><span class="p">(</span><span class="s1">'{core:frontpage:about_header}'</span><span class="p">);</span> <span class="cp">?&gt;</span><span class="nt">&lt;/h2&gt;</span>
-  <span class="nt">&lt;p&gt;</span><span class="cp">&lt;?php</span> <span class="k">echo</span> <span class="nv">$this</span><span class="o">-&gt;</span><span class="na">t</span><span class="p">(</span><span class="s1">'{core:frontpage:about_text}'</span><span class="p">);</span> <span class="cp">?&gt;</span><span class="nt">&lt;/p&gt;</span>
-</code></pre>
-</div>
-<p>
- In this example, two translated terms are included:
- <code>
-  about_header
- </code>
- and
- <code>
-  about_text
- </code>
- . Both these terms are found in a dictionary file named
- <code>
-  frontpage
- </code>
- , inside the module named
- <code>
-  core
- </code>
- .
-</p>
-<p>
- <strong>
-  Note:
- </strong>
- An important use-case here is that you can create your own module, that includes a new theme that overrides some of the default templates. You may in this template refer to both terms from the existing dictionary files, but you can also add new dictionary files in your new module that may introduce new alternative terms.
-</p>
-<h2 id="the-definition-file">
- The definition file
-</h2>
-<p>
- When the template library is about to lookup the translation of a term, it will lookup
-</p>
-<div class="codehilite">
- <pre><span></span><code><span class="o">*</span> <span class="nv">the</span> <span class="nv">definition</span> <span class="nv">file</span>, <span class="k">for</span> <span class="nv">the</span> <span class="nv">English</span> <span class="nv">translation</span>, <span class="nv">and</span> 
-<span class="o">*</span> <span class="nv">the</span> <span class="nv">translation</span> <span class="nv">file</span>, <span class="k">for</span> <span class="nv">translation</span> <span class="nv">to</span> <span class="nv">other</span> <span class="nv">languages</span>.
-</code></pre>
-</div>
-<p>
- SimpleSAMLphp will always fallback to the English translation using the definition file, both:
-</p>
-<div class="codehilite">
- <pre><span></span><code>* when the term is not translated into the *current selected language*, and
-* when the translation file is not available at all.
-</code></pre>
-</div>
-<p>
- The name of the definition file is
- <code>
-  BASENAME.definition.json
- </code>
- , where the term is referred to like this:
- <code>
-  {MODULENAME:BASENAME:TERM}
- </code>
- . The file MUST be placed in the followng location:
- <code>
-  modules/MODULENAME/dictionaries/BASENAME.definition.json
- </code>
- .
-</p>
-<p>
- The content of the defintion file is a
- <em>
-  JSON encoded array
- </em>
- of
- <code>
-  term =&gt; definition
- </code>
- , where definition is an array with an required
- <code>
-  en
- </code>
- index for the english translation, and the value is the English text.
-</p>
-<p>
- Here is an example of a definition file with three terms:
-</p>
-<div class="codehilite">
- <pre><span></span><code>  {
-      "header": {
-          "en": "Missing cookie"
-      },
-      "description": {
-          "en": "You appear to have disabled cookies in your browser. Please check the settings in your browser, and try again."
-      },
-      "retry": {
-          "en": "Retry"
-      }
-  }
-</code></pre>
-</div>
-<p>
- Note: you may not include other languages in the definition files, the
- <code>
-  en
- </code>
- index is used in order to at a later point in time introduce more meta information for each term, like in example:
-</p>
-<div class="codehilite">
- <pre><span></span><code>  <span class="s2">"</span><span class="s">header</span><span class="s2">"</span>: {
-      <span class="s2">"</span><span class="s">en</span><span class="s2">"</span>: <span class="s2">"</span><span class="s">Missing cookie</span><span class="s2">"</span>,
-      <span class="s2">"</span><span class="s">_note</span><span class="s2">"</span>: <span class="s2">"</span><span class="s">This text shows up on the error page when the browser do not support cookies.</span><span class="s2">"</span>
-  },
-</code></pre>
-</div>
-<p>
- To summarize the pattern of the definition file is as follows:
-</p>
-<div class="codehilite">
- <pre><span></span><code>  {
-      "TERM1": {
-          "en": "English text 1"
-      },
-      "TERM2": {
-          "en": "English text 2"
-      }
-  }
-</code></pre>
-</div>
-<h2 id="the-translation-file">
- The translation file
-</h2>
-<p>
- The translation file is similar to the definition file, but including translation to languages others than English.
-</p>
-<p>
- The structure of the file is identical to the definition files, except from the language index, which now is not
- <code>
-  en
- </code>
- , but the actual langauge that is translated:
-</p>
-<div class="codehilite">
- <pre><span></span><code>  {
-      "TERM1": {
-          "no": "Norsk tekst 1",
-          "da": "Dansk tekst 1"
-      },
-      "TERM2": {
-          "no": "Norsk tekst 2",
-          "da": "Dansk tekst 2"
-      }
-  }
-</code></pre>
-</div></main></body>
+ TODO: please complete this doc on how to translate SimpleSAMLphp
+</p></main></body>
 </html>
