--- a/contrib_modules/consentadmin/consentAdmin.html
+++ b/contrib_modules/consentadmin/consentAdmin.html
@@ -150,7 +150,7 @@ credentials in the config file. Example:
 </code></pre>
 </div>
 <p>
- Notice that credentials usualy is the same as for the consent module, but
+ Notice that credentials usually is the same as for the consent module, but
 can be different.
 </p>
 <p>
@@ -195,7 +195,7 @@ no filter is allowed to make userinteraction.
 </p>
 <p>
  It is up to the developers of the filters to respect the isPassive request.
-The prefered thing to do is to make your setup so that only filters that
+The preferred thing to do is to make your setup so that only filters that
 modify attributes is run. Othervise it is recommended that developers of
 filters to throw a 'NoPassive' exception, if the filter can not run without
 userinteraction.
