--- a/contrib_modules/negotiateext/negotiateext.html
+++ b/contrib_modules/negotiateext/negotiateext.html
@@ -164,7 +164,7 @@ Kerberos for clients that always will fail. Worst case scenario the
 browser will prompt the user for u/p in a popup box that will always
 fail. Only when the user clicks cancel the proper login process will
 continue. This is handled through the body of the 401 message the
-client recieves with the Negotiate request. In the body a URL to the
+client receives with the Negotiate request. In the body a URL to the
 fallback mechanism is supplied and meta-refresh is used to redirect the
 client.
 </p>
@@ -427,7 +427,7 @@ this:
 </code></pre>
 </div>
 <p>
- It will work as loadState will take controll and call
+ It will work as loadState will take control and call
 Negotiate-&gt;authenticate() but remaining code in retry.php will be
 discarded. Other side-effects may occur.
 </p>
