--- a/devel/simplesamlphp-artifact-idp.html
+++ b/devel/simplesamlphp-artifact-idp.html
@@ -120,7 +120,7 @@ You need both a memcache server and a the PHP memcached client (extension).
 If you are running Debian or Ubuntu, you can install this by running:
 </p>
 <div class="codehilite">
- <pre><span></span><code>  apt install memcached php-memcached
+ <pre><span></span><code>apt install memcached php-memcached
 </code></pre>
 </div>
 <p>
@@ -181,11 +181,11 @@ If you are running memcache on a different server than the IdP, you must also ch
  metadata file:
 </p>
 <div class="codehilite">
- <pre><span></span><code><span class="w">  </span><span class="o">$</span><span class="nt">metadata</span><span class="cp">[</span><span class="s1">'https://example.org/saml-idp'</span><span class="cp">]</span><span class="w"> </span><span class="o">=</span><span class="w"> </span><span class="cp">[</span><span class="w"></span>
-<span class="w">      </span><span class="err">[</span><span class="nx">....</span><span class="cp">]</span><span class="w"></span>
-<span class="w">      </span><span class="s1">'auth'</span><span class="w"> </span><span class="o">=&gt;</span><span class="w"> </span><span class="s1">'example-userpass'</span><span class="o">,</span><span class="w"></span>
-<span class="w">      </span><span class="s1">'saml20.sendartifact'</span><span class="w"> </span><span class="o">=&gt;</span><span class="w"> </span><span class="nt">TRUE</span><span class="o">,</span><span class="w"></span>
-<span class="w">  </span><span class="o">];</span><span class="w"></span>
+ <pre><span></span><code><span class="x">$metadata['https://example.org/saml-idp'] = [</span>
+<span class="x">    [....]</span>
+<span class="x">    'auth' =&gt; 'example-userpass',</span>
+<span class="x">    'saml20.sendartifact' =&gt; true,</span>
+<span class="x">];</span>
 </code></pre>
 </div>
 <h2 id="add-new-metadata-to-sps">
@@ -200,13 +200,13 @@ You therefore need to update the metadata for your IdP at your SPs.
  metadata for SimpleSAMLphp SPs should contain something like:
 </p>
 <div class="codehilite">
- <pre><span></span><code>  'ArtifactResolutionService' =&gt; [
-      [
-          'index' =&gt; 0,
-          'Location' =&gt; 'https://idp.example.org/simplesaml/saml2/idp/ArtifactResolutionService.php',
-          'Binding' =&gt; 'urn:oasis:names:tc:SAML:2.0:bindings:SOAP',
-      ],
-  ],
+ <pre><span></span><code><span class="x">'ArtifactResolutionService' =&gt; [</span>
+<span class="x">    [</span>
+<span class="x">        'index' =&gt; 0,</span>
+<span class="x">        'Location' =&gt; 'https://idp.example.org/simplesaml/saml2/idp/ArtifactResolutionService.php',</span>
+<span class="x">        'Binding' =&gt; 'urn:oasis:names:tc:SAML:2.0:bindings:SOAP',</span>
+<span class="x">    ],</span>
+<span class="x">],</span>
 </code></pre>
 </div>
 <h2 id="sp-metadata-on-the-idp">
@@ -222,18 +222,18 @@ This means that you must use the complex endpoint format in
 In general, that should look something like:
 </p>
 <div class="codehilite">
- <pre><span></span><code>  'AssertionConsumerService' =&gt; array (
-      [
-          'Binding' =&gt; 'urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST',
-          'Location' =&gt; 'https://sp.example.org/simplesaml/module.php/saml/sp/assertionConsumerService/default-sp',
-          'index' =&gt; 0,
-      ],
-      [
-          'Binding' =&gt; 'urn:oasis:names:tc:SAML:2.0:bindings:HTTP-Artifact',
-          'Location' =&gt; 'https://sp.example.org/simplesaml/module.php/saml/sp/assertionConsumerService/default-sp',
-          'index' =&gt; 2,
-      ],
-  ),
+ <pre><span></span><code><span class="x">'AssertionConsumerService' =&gt; [</span>
+<span class="x">    [</span>
+<span class="x">        'Binding' =&gt; 'urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST',</span>
+<span class="x">        'Location' =&gt; 'https://sp.example.org/simplesaml/module.php/saml/sp/assertionConsumerService/default-sp',</span>
+<span class="x">        'index' =&gt; 0,</span>
+<span class="x">    ],</span>
+<span class="x">    [</span>
+<span class="x">        'Binding' =&gt; 'urn:oasis:names:tc:SAML:2.0:bindings:HTTP-Artifact',</span>
+<span class="x">        'Location' =&gt; 'https://sp.example.org/simplesaml/module.php/saml/sp/assertionConsumerService/default-sp',</span>
+<span class="x">        'index' =&gt; 2,</span>
+<span class="x">    ],</span>
+<span class="x">],</span>
 </code></pre>
 </div>
 <p>
@@ -257,12 +257,12 @@ To do this, you need to set the
 That option should refer to a file containing the webserver certificate.
 </p>
 <div class="codehilite">
- <pre><span></span><code><span class="w">  </span><span class="o">$</span><span class="nt">metadata</span><span class="cp">[</span><span class="s1">'https://example.org/saml-idp'</span><span class="cp">]</span><span class="w"> </span><span class="o">=</span><span class="w"> </span><span class="cp">[</span><span class="w"></span>
-<span class="w">      </span><span class="err">[</span><span class="nx">....</span><span class="cp">]</span><span class="w"></span>
-<span class="w">      </span><span class="s1">'auth'</span><span class="w"> </span><span class="o">=&gt;</span><span class="w"> </span><span class="s1">'example-userpass'</span><span class="o">,</span><span class="w"></span>
-<span class="w">      </span><span class="s1">'saml20.sendartifact'</span><span class="w"> </span><span class="o">=&gt;</span><span class="w"> </span><span class="nt">TRUE</span><span class="o">,</span><span class="w"></span>
-<span class="w">      </span><span class="s1">'https.certificate'</span><span class="w"> </span><span class="o">=&gt;</span><span class="w"> </span><span class="s1">'/etc/apache2/webserver.crt'</span><span class="o">,</span><span class="w"></span>
-<span class="w">  </span><span class="o">];</span><span class="w"></span>
+ <pre><span></span><code><span class="x">$metadata['https://example.org/saml-idp'] = [</span>
+<span class="x">    [....]</span>
+<span class="x">    'auth' =&gt; 'example-userpass',</span>
+<span class="x">    'saml20.sendartifact' =&gt; true,</span>
+<span class="x">    'https.certificate' =&gt; '/etc/apache2/webserver.crt',</span>
+<span class="x">];</span>
 </code></pre>
 </div></main></body>
 </html>
