--- a/devel/simplesamlphp-authsource.html
+++ b/devel/simplesamlphp-authsource.html
@@ -230,24 +230,40 @@ If the username or password is incorrect, it should throw an error saying so:
    </code>
    -class.
   </p>
-  <div class="codehilite">
-   <pre><span></span><code>**Rationale**:
- - Deriving all authentication sources from a single base class allows us extend all authentication sources by extending the base class.
-</code></pre>
-  </div>
+  <p>
+   <strong>
+    Rationale
+   </strong>
+   :
+- Deriving all authentication sources from a single base class allows us extend all authentication sources by extending the base class.
+  </p>
  </li>
  <li>
   <p>
    If a constructor is implemented, it must first call the parent constructor, passing along all parameters, before accessing any of the parameters.
-   In general, only the $config parameter should be accessed when implementing the authentication source.
+  In general, only the $config parameter should be accessed when implementing the authentication source.
   </p>
-  <div class="codehilite">
-   <pre><span></span><code><span class="o">**</span><span class="n">Rationale</span><span class="o">**</span><span class="p">:</span><span class="w"></span>
-<span class="w"> </span><span class="o">-</span><span class="w"> </span><span class="n">PHP</span><span class="w"> </span><span class="n">doesn</span><span class="s1">'t automatically call any parent constructor, so it needs to be done manually.</span>
-<span class="w"> </span><span class="o">-</span><span class="w"> </span><span class="n">The</span><span class="w"> </span><span class="err">`</span><span class="o">$</span><span class="n">info</span><span class="err">`</span><span class="o">-</span><span class="n">array</span><span class="w"> </span><span class="k">is</span><span class="w"> </span><span class="n">used</span><span class="w"> </span><span class="n">to</span><span class="w"> </span><span class="n">provide</span><span class="w"> </span><span class="n">information</span><span class="w"> </span><span class="n">to</span><span class="w"> </span><span class="n">the</span><span class="w"> </span><span class="err">`</span>\<span class="n">SimpleSAML</span>\<span class="n">Auth</span>\<span class="n">Source</span><span class="err">`</span><span class="w"> </span><span class="n">base</span><span class="w"> </span><span class="k">class</span><span class="p">,</span><span class="w"> </span><span class="ow">and</span><span class="w"> </span><span class="n">therefore</span><span class="w"> </span><span class="n">needs</span><span class="w"> </span><span class="n">to</span><span class="w"> </span><span class="n">be</span><span class="w"> </span><span class="n">included</span><span class="o">.</span><span class="w"></span>
-<span class="w"> </span><span class="o">-</span><span class="w"> </span><span class="n">Including</span><span class="w"> </span><span class="n">the</span><span class="w"> </span><span class="err">`</span><span class="o">$</span><span class="n">config</span><span class="err">`</span><span class="o">-</span><span class="n">array</span><span class="w"> </span><span class="n">makes</span><span class="w"> </span><span class="n">it</span><span class="w"> </span><span class="n">possible</span><span class="w"> </span><span class="n">to</span><span class="w"> </span><span class="n">add</span><span class="w"> </span><span class="n">generic</span><span class="w"> </span><span class="n">configuration</span><span class="w"> </span><span class="n">options</span><span class="w"> </span><span class="n">that</span><span class="w"> </span><span class="n">are</span><span class="w"> </span><span class="n">valid</span><span class="w"> </span><span class="k">for</span><span class="w"> </span><span class="n">all</span><span class="w"> </span><span class="n">authentication</span><span class="w"> </span><span class="n">sources</span><span class="o">.</span><span class="w"></span>
-</code></pre>
-  </div>
+  <p>
+   <strong>
+    Rationale
+   </strong>
+   :
+- PHP doesn't automatically call any parent constructor, so it needs to be done manually.
+- The
+   <code>
+    $info
+   </code>
+   -array is used to provide information to the
+   <code>
+    \SimpleSAML\Auth\Source
+   </code>
+   base class, and therefore needs to be included.
+- Including the
+   <code>
+    $config
+   </code>
+   -array makes it possible to add generic configuration options that are valid for all authentication sources.
+  </p>
  </li>
  <li>
   <p>
@@ -256,18 +272,28 @@ If the username or password is incorrect, it should throw an error saying so:
     authenticate(&amp;$state)
    </code>
    -function must be implemented.
-   If this function completes, it is assumed that the user is authenticated, and that the
+  If this function completes, it is assumed that the user is authenticated, and that the
    <code>
     $state
    </code>
    -array has been updated with the user's attributes.
   </p>
-  <div class="codehilite">
-   <pre><span></span><code><span class="o">**</span><span class="nv">Rationale</span><span class="o">**</span>:
- <span class="o">-</span> <span class="nv">Allowing</span> <span class="nv">the</span> `<span class="nv">authenticate</span><span class="ss">()</span>`<span class="o">-</span><span class="nv">function</span> <span class="nv">to</span> <span class="k">return</span> <span class="nv">after</span> <span class="nv">updating</span> <span class="nv">the</span> `$<span class="nv">state</span>`<span class="o">-</span><span class="nv">array</span> <span class="nv">enables</span> <span class="nv">us</span> <span class="nv">to</span> <span class="k">do</span> <span class="nv">authentication</span> <span class="nv">without</span> <span class="nv">redirecting</span> <span class="nv">the</span> <span class="nv">user</span>.
-   <span class="nv">This</span> <span class="nv">can</span> <span class="nv">be</span> <span class="nv">used</span> <span class="k">if</span> <span class="nv">the</span> <span class="nv">authentication</span> <span class="nv">doesn</span><span class="s1">'</span><span class="s">t require user input, for example if the authentication can be done based on the IP-address of the user.</span>
-</code></pre>
-  </div>
+  <p>
+   <strong>
+    Rationale
+   </strong>
+   :
+- Allowing the
+   <code>
+    authenticate()
+   </code>
+   -function to return after updating the
+   <code>
+    $state
+   </code>
+   -array enables us to do authentication without redirecting the user.
+  This can be used if the authentication doesn't require user input, for example if the authentication can be done based on the IP-address of the user.
+  </p>
  </li>
  <li>
   <p>
@@ -280,17 +306,19 @@ If the username or password is incorrect, it should throw an error saying so:
     \SimpleSAML\Auth\Source::completeAuth
    </code>
    with the new state array.
-    The state array must be an update of the array passed to the
+  The state array must be an update of the array passed to the
    <code>
     authenticate
    </code>
    -function.
   </p>
-  <div class="codehilite">
-   <pre><span></span><code>**Rationale**:
- - Preserving the same state array allows us to save information in that array before the authentication starts, and restoring it when authentication completes.
-</code></pre>
-  </div>
+  <p>
+   <strong>
+    Rationale
+   </strong>
+   :
+- Preserving the same state array allows us to save information in that array before the authentication starts, and restoring it when authentication completes.
+  </p>
  </li>
  <li>
   <p>
@@ -299,47 +327,57 @@ If the username or password is incorrect, it should throw an error saying so:
     authenticate()
    </code>
    -function.
-    Instead, the state should be saved, and the user should be redirected to a new page.
+  Instead, the state should be saved, and the user should be redirected to a new page.
   </p>
-  <div class="codehilite">
-   <pre><span></span><code><span class="o">**</span><span class="n">Rationale</span><span class="o">**</span><span class="p">:</span><span class="w"></span>
-<span class="w"> </span><span class="o">-</span><span class="w"> </span><span class="n">The</span><span class="w"> </span><span class="err">`</span><span class="n">authenticate</span><span class="p">()</span><span class="err">`</span><span class="o">-</span><span class="n">function</span><span class="w"> </span><span class="k">is</span><span class="w"> </span><span class="n">called</span><span class="w"> </span><span class="ow">in</span><span class="w"> </span><span class="n">the</span><span class="w"> </span><span class="n">context</span><span class="w"> </span><span class="n">of</span><span class="w"> </span><span class="n">a</span><span class="w"> </span><span class="n">different</span><span class="w"> </span><span class="n">PHP</span><span class="w"> </span><span class="n">page</span><span class="o">.</span><span class="w"></span>
-<span class="w">   </span><span class="n">If</span><span class="w"> </span><span class="n">the</span><span class="w"> </span><span class="n">user</span><span class="w"> </span><span class="n">reloads</span><span class="w"> </span><span class="n">that</span><span class="w"> </span><span class="n">page</span><span class="p">,</span><span class="w"> </span><span class="n">unpredictable</span><span class="w"> </span><span class="n">results</span><span class="w"> </span><span class="n">may</span><span class="w"> </span><span class="n">occur</span><span class="o">.</span><span class="w"></span>
-</code></pre>
-  </div>
+  <p>
+   <strong>
+    Rationale
+   </strong>
+   :
+- The
+   <code>
+    authenticate()
+   </code>
+   -function is called in the context of a different PHP page.
+  If the user reloads that page, unpredictable results may occur.
+  </p>
  </li>
  <li>
   <p>
    No state information about any authentication should be stored in the authentication source object.
-    It must instead be stored in the state array.
-    Any changes to variables in the authentication source object may be lost.
+  It must instead be stored in the state array.
+  Any changes to variables in the authentication source object may be lost.
   </p>
-  <div class="codehilite">
-   <pre><span></span><code>**Rationale**:
- - This saves us from having to save the entire authentication object between requests.
-   Instead, we can recreate it from the configuration.
-</code></pre>
-  </div>
+  <p>
+   <strong>
+    Rationale
+   </strong>
+   :
+- This saves us from having to save the entire authentication object between requests.
+  Instead, we can recreate it from the configuration.
+  </p>
  </li>
  <li>
   <p>
    The authentication source object must be serializable.
-    It may be serialized between being constructed and the call to the
+  It may be serialized between being constructed and the call to the
    <code>
     authenticate()
    </code>
    -function.
-    This means that, for example, no database connections should be created in the constructor and later used in the
+  This means that, for example, no database connections should be created in the constructor and later used in the
    <code>
     authenticate()
    </code>
    -function.
   </p>
-  <div class="codehilite">
-   <pre><span></span><code><span class="o">**</span><span class="nv">Rationale</span><span class="o">**</span>:
- <span class="o">-</span> <span class="k">If</span> <span class="nv">parsing</span> <span class="nv">the</span> <span class="nv">configuration</span> <span class="nv">and</span> <span class="nv">creating</span> <span class="nv">the</span> <span class="nv">authentication</span> <span class="nv">object</span> <span class="nv">is</span> <span class="nv">shown</span> <span class="nv">to</span> <span class="nv">be</span> <span class="nv">a</span> <span class="nv">bottleneck</span>, <span class="nv">we</span> <span class="nv">can</span> <span class="nv">cache</span> <span class="nv">an</span> <span class="nv">initialized</span> <span class="nv">authentication</span> <span class="nv">source</span>.
-</code></pre>
-  </div>
+  <p>
+   <strong>
+    Rationale
+   </strong>
+   :
+- If parsing the configuration and creating the authentication object is shown to be a bottleneck, we can cache an initialized authentication source.
+  </p>
  </li>
 </ul></main></body>
 </html>
