--- a/devel/simplesamlphp-errorhandling.html
+++ b/devel/simplesamlphp-errorhandling.html
@@ -101,25 +101,11 @@
      <a href="#throwing-exceptions">
       Throwing exceptions
      </a>
-     <ul>
-      <li>
-       <a href="#note">
-        Note
-       </a>
-      </li>
-     </ul>
     </li>
     <li>
      <a href="#returning-specific-saml-2-errors">
       Returning specific SAML 2 errors
      </a>
-     <ul>
-      <li>
-       <a href="#note_1">
-        Note
-       </a>
-      </li>
-     </ul>
     </li>
     <li>
      <a href="#converting-saml-2-errors-to-normal-exceptions">
@@ -142,7 +128,7 @@
        </a>
        <ul>
         <li>
-         <a href="#note_2">
+         <a href="#note">
           Note
          </a>
         </li>
@@ -169,20 +155,8 @@
        <a href="#simplesamlauthprocessingchain">
         \SimpleSAML\Auth\ProcessingChain
        </a>
-       <ul>
-        <li>
-         <a href="#note_3">
-          Note
-         </a>
-        </li>
-       </ul>
       </li>
      </ul>
-    </li>
-    <li>
-     <a href="#custom-error-show-function">
-      Custom error show function
-     </a>
     </li>
    </ul>
   </li>
@@ -222,12 +196,12 @@ The simplest case is if you want to throw it during the
 In those methods, you can just throw an exception:
 </p>
 <div class="codehilite">
- <pre><span></span><code>  <span class="nv">public</span> <span class="nv">function</span> <span class="nv">process</span><span class="ss">(</span><span class="nv">array</span> <span class="o">&amp;</span>$<span class="nv">state</span><span class="ss">)</span>: <span class="nv">void</span>
-  {
-      <span class="k">if</span> <span class="ss">(</span>$<span class="nv">state</span>[<span class="s1">'</span><span class="s">something</span><span class="s1">'</span>] <span class="o">===</span> <span class="nv">false</span><span class="ss">)</span> {
-          <span class="nv">throw</span> <span class="nv">new</span> \<span class="nv">SimpleSAML</span>\<span class="nv">Error</span>\<span class="nv">Exception</span><span class="ss">(</span><span class="s1">'</span><span class="s">Something is wrong...</span><span class="s1">'</span><span class="ss">)</span><span class="c1">;</span>
-      }
-  }
+ <pre><span></span><code><span class="x">public function process(array &amp;$state): void</span>
+<span class="x">{</span>
+<span class="x">    if ($state['something'] === false) {</span>
+<span class="x">        throw new \SimpleSAML\Error\Exception('Something is wrong...');</span>
+<span class="x">    }</span>
+<span class="x">}</span>
 </code></pre>
 </div>
 <p>
@@ -241,11 +215,14 @@ In those methods, you can just throw an exception:
  function:
 </p>
 <div class="codehilite">
- <pre><span></span><code><span class="w">  </span><span class="o">&lt;</span><span class="err">?</span><span class="n">php</span><span class="w"></span>
-<span class="w">  </span><span class="o">$</span><span class="n">id</span><span class="w"> </span><span class="o">=</span><span class="w"> </span><span class="o">$</span><span class="n">_REQUEST</span><span class="p">[</span><span class="s1">'StateId'</span><span class="p">];</span><span class="w"></span>
-<span class="w">  </span><span class="o">$</span><span class="n">state</span><span class="w"> </span><span class="o">=</span><span class="w"> </span>\<span class="n">SimpleSAML</span>\<span class="n">Auth</span>\<span class="n">State</span><span class="p">::</span><span class="n">loadState</span><span class="p">(</span><span class="o">$</span><span class="n">id</span><span class="p">,</span><span class="w"> </span><span class="s1">'somestage...'</span><span class="p">);</span><span class="w"></span>
-<span class="w">  </span>\<span class="n">SimpleSAML</span>\<span class="n">Auth</span>\<span class="n">State</span><span class="p">::</span><span class="n">throwException</span><span class="p">(</span><span class="o">$</span><span class="n">state</span><span class="p">,</span><span class="w"></span>
-<span class="w">      </span><span class="n">new</span><span class="w"> </span>\<span class="n">SimpleSAML</span>\<span class="n">Error</span>\<span class="n">Exception</span><span class="p">(</span><span class="s1">'Something is wrong...'</span><span class="p">));</span><span class="w"></span>
+ <pre><span></span><code><span class="cp">&lt;?php</span>
+
+<span class="nv">$id</span> <span class="o">=</span> <span class="nv">$_REQUEST</span><span class="p">[</span><span class="s1">'StateId'</span><span class="p">];</span>
+<span class="nv">$state</span> <span class="o">=</span> <span class="nx">\SimpleSAML\Auth\State</span><span class="o">::</span><span class="na">loadState</span><span class="p">(</span><span class="nv">$id</span><span class="p">,</span> <span class="s1">'somestage...'</span><span class="p">);</span>
+<span class="nx">\SimpleSAML\Auth\State</span><span class="o">::</span><span class="na">throwException</span><span class="p">(</span>
+    <span class="nv">$state</span><span class="p">,</span>
+    <span class="k">new</span> <span class="nx">\SimpleSAML\Error\Exception</span><span class="p">(</span><span class="s1">'Something is wrong...'</span><span class="p">)</span>
+<span class="p">);</span>
 </code></pre>
 </div>
 <p>
@@ -255,9 +232,11 @@ In those methods, you can just throw an exception:
  </code>
  function will then transfer your exception to the appropriate error handler.
 </p>
-<h3 id="note">
- Note
-</h3>
+<p>
+ <code>
+  Note
+ </code>
+</p>
 <p>
  Note that we use the
  <code>
@@ -384,9 +363,11 @@ If it is unable to convert the exception, it will return a generic SAML 2 error 
   in the same file. (See the next section.)
  </li>
 </ul>
-<h3 id="note_1">
- Note
-</h3>
+<p>
+ <code>
+  Note
+ </code>
+</p>
 <p>
  While it is possible to throw SAML 2 errors directly from within authentication sources and processing filters, this practice is discouraged.
 Throwing SAML 2 errors will tie your code directly to the SAML 2 protocol, and it may be more difficult to use with other protocols.
@@ -489,7 +470,7 @@ This variable can be accessed through the
  method.
 It returns an array with one line of text for each function call in the stack, ending on the point where the exception was created.
 </p>
-<h4 id="note_2">
+<h4 id="note">
  Note
 </h4>
 <p>
@@ -589,12 +570,12 @@ The exception can be located in a field named
 The following code illustrates this behaviour:
 </p>
 <div class="codehilite">
- <pre><span></span><code><span class="w">  </span><span class="k">if</span><span class="w"> </span><span class="p">(</span><span class="n">array_key_exists</span><span class="p">(</span>\<span class="n">SimpleSAML</span>\<span class="n">Auth</span>\<span class="n">State</span><span class="p">::</span><span class="n">EXCEPTION_PARAM</span><span class="p">,</span><span class="w"> </span><span class="o">$</span><span class="n">_REQUEST</span><span class="p">))</span><span class="w"> </span><span class="p">{</span><span class="w"></span>
-<span class="w">      </span><span class="o">$</span><span class="n">state</span><span class="w"> </span><span class="o">=</span><span class="w"> </span>\<span class="n">SimpleSAML</span>\<span class="n">Auth</span>\<span class="n">State</span><span class="p">::</span><span class="n">loadExceptionState</span><span class="p">();</span><span class="w"></span>
-<span class="w">      </span><span class="o">$</span><span class="n">exception</span><span class="w"> </span><span class="o">=</span><span class="w"> </span><span class="o">$</span><span class="n">state</span><span class="p">[</span>\<span class="n">SimpleSAML</span>\<span class="n">Auth</span>\<span class="n">State</span><span class="p">::</span><span class="n">EXCEPTION_DATA</span><span class="p">];</span><span class="w"></span>
+ <pre><span></span><code><span class="x">if (array_key_exists(\SimpleSAML\Auth\State::EXCEPTION_PARAM, $_REQUEST)) {</span>
+<span class="x">    $state = \SimpleSAML\Auth\State::loadExceptionState();</span>
+<span class="x">    $exception = $state[\SimpleSAML\Auth\State::EXCEPTION_DATA];</span>
 
-<span class="w">      </span><span class="o">/*</span><span class="w"> </span><span class="n">Process</span><span class="w"> </span><span class="n">exception</span><span class="o">.</span><span class="w"> </span><span class="o">*/</span><span class="w"></span>
-<span class="w">  </span><span class="p">}</span><span class="w"></span>
+<span class="x">    /* Process exception. */</span>
+<span class="x">}</span>
 </code></pre>
 </div>
 <h3 id="simplesamlauthprocessingchain">
@@ -623,63 +604,49 @@ The result will be delivered directly if it is possible, but if not, it will be 
  The code for handling this becomes something like:
 </p>
 <div class="codehilite">
- <pre><span></span><code><span class="w">  </span><span class="k">if</span><span class="w"> </span><span class="p">(</span><span class="n">array_key_exists</span><span class="p">(</span>\<span class="n">SimpleSAML</span>\<span class="n">Auth</span>\<span class="n">State</span><span class="p">::</span><span class="n">EXCEPTION_PARAM</span><span class="p">,</span><span class="w"> </span><span class="o">$</span><span class="n">_REQUEST</span><span class="p">))</span><span class="w"> </span><span class="p">{</span><span class="w"></span>
-<span class="w">      </span><span class="o">$</span><span class="n">state</span><span class="w"> </span><span class="o">=</span><span class="w"> </span>\<span class="n">SimpleSAML</span>\<span class="n">Auth</span>\<span class="n">State</span><span class="p">::</span><span class="n">loadExceptionState</span><span class="p">();</span><span class="w"></span>
-<span class="w">      </span><span class="o">$</span><span class="n">exception</span><span class="w"> </span><span class="o">=</span><span class="w"> </span><span class="o">$</span><span class="n">state</span><span class="p">[</span>\<span class="n">SimpleSAML</span>\<span class="n">Auth</span>\<span class="n">State</span><span class="p">::</span><span class="n">EXCEPTION_DATA</span><span class="p">];</span><span class="w"></span>
+ <pre><span></span><code><span class="x">if (array_key_exists(\SimpleSAML\Auth\State::EXCEPTION_PARAM, $_REQUEST)) {</span>
+<span class="x">    $state = \SimpleSAML\Auth\State::loadExceptionState();</span>
+<span class="x">    $exception = $state[\SimpleSAML\Auth\State::EXCEPTION_DATA];</span>
 
-<span class="w">      </span><span class="o">/*</span><span class="w"> </span><span class="n">Handle</span><span class="w"> </span><span class="n">exception</span><span class="o">...</span><span class="w"> </span><span class="o">*/</span><span class="w"></span>
-<span class="w">      </span><span class="p">[</span><span class="o">...</span><span class="p">]</span><span class="w"></span>
-<span class="w">  </span><span class="p">}</span><span class="w"></span>
+<span class="x">    /* Handle exception... */</span>
+<span class="x">    [...]</span>
+<span class="x">}</span>
 
-<span class="w">  </span><span class="o">$</span><span class="n">procChain</span><span class="w"> </span><span class="o">=</span><span class="w"> </span><span class="p">[</span><span class="o">...</span><span class="p">];</span><span class="w"></span>
+<span class="x">$procChain = [...];</span>
 
-<span class="w">  </span><span class="o">$</span><span class="n">state</span><span class="w"> </span><span class="o">=</span><span class="w"> </span><span class="p">[</span><span class="w"></span>
-<span class="w">      </span><span class="s1">'ReturnURL'</span><span class="w"> </span><span class="o">=&gt;</span><span class="w"> </span>\<span class="n">SimpleSAML</span>\<span class="n">Utils</span>\<span class="n">HTTP</span><span class="p">::</span><span class="n">getSelfURLNoQuery</span><span class="p">(),</span><span class="w"></span>
-<span class="w">      </span>\<span class="n">SimpleSAML</span>\<span class="n">Auth</span>\<span class="n">State</span><span class="p">::</span><span class="n">EXCEPTION_HANDLER_URL</span><span class="w"> </span><span class="o">=&gt;</span><span class="w"> </span>\<span class="n">SimpleSAML</span>\<span class="n">Utils</span>\<span class="n">HTTP</span><span class="p">::</span><span class="n">getSelfURLNoQuery</span><span class="p">(),</span><span class="w"></span>
-<span class="w">      </span><span class="p">[</span><span class="o">...</span><span class="p">],</span><span class="w"></span>
-<span class="w">  </span><span class="p">]</span><span class="w"></span>
+<span class="x">$state = [</span>
+<span class="x">    'ReturnURL' =&gt; \SimpleSAML\Utils\HTTP::getSelfURLNoQuery(),</span>
+<span class="x">    \SimpleSAML\Auth\State::EXCEPTION_HANDLER_URL =&gt; \SimpleSAML\Utils\HTTP::getSelfURLNoQuery(),</span>
+<span class="x">    [...],</span>
+<span class="x">]</span>
 
-<span class="w">  </span><span class="n">try</span><span class="w"> </span><span class="p">{</span><span class="w"></span>
-<span class="w">      </span><span class="o">$</span><span class="n">procChain</span><span class="o">-&gt;</span><span class="n">processState</span><span class="p">(</span><span class="o">$</span><span class="n">state</span><span class="p">);</span><span class="w"></span>
-<span class="w">  </span><span class="p">}</span><span class="w"> </span><span class="n">catch</span><span class="w"> </span><span class="p">(</span>\<span class="n">SimpleSAML</span>\<span class="n">Error</span>\<span class="n">Exception</span><span class="w"> </span><span class="o">$</span><span class="n">e</span><span class="p">)</span><span class="w"> </span><span class="p">{</span><span class="w"></span>
-<span class="w">      </span><span class="o">/*</span><span class="w"> </span><span class="n">Handle</span><span class="w"> </span><span class="n">exception</span><span class="o">.</span><span class="w"> </span><span class="o">*/</span><span class="w"></span>
-<span class="w">      </span><span class="p">[</span><span class="o">...</span><span class="p">];</span><span class="w"></span>
-<span class="w">  </span><span class="p">}</span><span class="w"></span>
-</code></pre>
-</div>
-<h4 id="note_3">
- Note
-</h4>
-<p>
- An exception which isn't a subclass of
- <code>
-  \SimpleSAML\Error\Exception
- </code>
- will be converted to the
- <code>
-  \SimpleSAML\Error\UnserializedException
- </code>
- class.
-This happens regardless of whether the exception is delivered directly or through the error handler.
-This is done to be consistent in what the application receives - now it will always receive the same exception, regardless of whether it is delivered directly or through a redirect.
-</p>
-<h2 id="custom-error-show-function">
- Custom error show function
-</h2>
-<p>
- Optional custom error show function, called from \SimpleSAML\Error\Error::show, is defined with 'errors.show_function' in config.php.
-</p>
-<p>
- Example code for this function, which implements the same functionality as \SimpleSAML\Error\Error::show, looks something like:
-</p>
-<div class="codehilite">
- <pre><span></span><code><span class="w">  </span><span class="n">public</span><span class="w"> </span><span class="n">static</span><span class="w"> </span><span class="kr">function</span><span class="w"> </span><span class="n">show</span><span class="p">(</span><span class="err">\</span><span class="n">SimpleSAML</span><span class="err">\</span><span class="n">Configuration</span><span class="w"> </span><span class="err">$</span><span class="n">config</span><span class="p">,</span><span class="w"> </span><span class="n">array</span><span class="w"> </span><span class="err">$</span><span class="n">data</span><span class="p">)</span><span class="w"></span>
-<span class="w">  </span><span class="p">{</span><span class="w"></span>
-<span class="w">      </span><span class="err">$</span><span class="n">t</span><span class="w"> </span><span class="o">=</span><span class="w"> </span><span class="n">new</span><span class="w"> </span><span class="err">\</span><span class="n">SimpleSAML</span><span class="err">\</span><span class="n">XHTML</span><span class="err">\</span><span class="n">Template</span><span class="p">(</span><span class="err">$</span><span class="n">config</span><span class="p">,</span><span class="w"> </span><span class="s">'error.twig'</span><span class="p">,</span><span class="w"> </span><span class="s">'errors'</span><span class="p">);</span><span class="w"></span>
-<span class="w">      </span><span class="err">$</span><span class="n">t</span><span class="o">-&gt;</span><span class="kt">data</span><span class="w"> </span><span class="o">=</span><span class="w"> </span><span class="n">array_merge</span><span class="p">(</span><span class="err">$</span><span class="n">t</span><span class="o">-&gt;</span><span class="n">data</span><span class="p">,</span><span class="w"> </span><span class="err">$</span><span class="n">data</span><span class="p">);</span><span class="w"></span>
-<span class="w">      </span><span class="err">$</span><span class="n">t</span><span class="o">-&gt;</span><span class="n">send</span><span class="p">();</span><span class="w"></span>
-<span class="w">      </span><span class="n">exit</span><span class="p">;</span><span class="w"></span>
-<span class="w">  </span><span class="p">}</span><span class="w"></span>
+<span class="x">try {</span>
+<span class="x">    $procChain-&gt;processState($state);</span>
+<span class="x">} catch (\SimpleSAML\Error\Exception $e) {</span>
+<span class="x">    /* Handle exception. */</span>
+<span class="x">    [...];</span>
+<span class="x">}</span>
+
+<span class="x">#### Note</span>
+
+<span class="x">An exception which isn't a subclass of `\SimpleSAML\Error\Exception` will be converted to the `\SimpleSAML\Error\UnserializedException` class.</span>
+<span class="x">This happens regardless of whether the exception is delivered directly or through the error handler.</span>
+<span class="x">This is done to be consistent in what the application receives - now it will always receive the same exception, regardless of whether it is delivered directly or through a redirect.</span>
+
+<span class="x">## Custom error show function</span>
+
+<span class="x">Optional custom error show function, called from \SimpleSAML\Error\Error::show, is defined with 'errors.show_function' in config.php.</span>
+
+<span class="x">Example code for this function, which implements the same functionality as \SimpleSAML\Error\Error::show, looks something like:</span>
+
+<span class="x">```php</span>
+<span class="x">public static function show(\SimpleSAML\Configuration $config, array $data)</span>
+<span class="x">{</span>
+<span class="x">    $t = new \SimpleSAML\XHTML\Template($config, 'error.twig', 'errors');</span>
+<span class="x">    $t-&gt;data = array_merge($t-&gt;data, $data);</span>
+<span class="x">    $t-&gt;send();</span>
+<span class="x">    exit;</span>
+<span class="x">}</span>
 </code></pre>
 </div></main></body>
 </html>
