--- a/devel/simplesamlphp-googleapps.html
+++ b/devel/simplesamlphp-googleapps.html
@@ -204,7 +204,9 @@ a version of SimpleSAMLphp at your server.
 </p>
 <p>
  In this example we will setup this server as an IdP for Google Workspace:
-  dev2.andreas.feide.no
+</p>
+<p>
+ dev2.andreas.feide.no
 </p>
 <h2 id="enabling-the-identity-provider-functionality">
  Enabling the Identity Provider functionality
@@ -217,7 +219,7 @@ a version of SimpleSAMLphp at your server.
  , and enable the SAML 2.0 IdP:
 </p>
 <div class="codehilite">
- <pre><span></span><code>  'enable.saml20-idp' =&gt; true,
+ <pre><span></span><code><span class="x">'enable.saml20-idp' =&gt; true,</span>
 </code></pre>
 </div>
 <h2 id="setting-up-a-signing-certificate">
@@ -228,7 +230,7 @@ a version of SimpleSAMLphp at your server.
 Here is an example of an openssl command to generate a new key and a self signed certificate to use for signing SAML messages:
 </p>
 <div class="codehilite">
- <pre><span></span><code>  openssl req -newkey rsa:3072 -new -x509 -days 3652 -nodes -out googleworkspaceidp.crt -keyout googleworkspaceidp.pem
+ <pre><span></span><code>openssl req -newkey rsa:3072 -new -x509 -days <span class="m">3652</span> -nodes -out googleworkspaceidp.crt -keyout googleworkspaceidp.pem
 </code></pre>
 </div>
 <p>
@@ -237,21 +239,21 @@ Here is an example of an openssl command to generate a new key and a self signed
 <p>
  Here is an example of typical user input when creating a certificate request:
 </p>
-<div class="codehilite">
- <pre><span></span><code><span class="w">  </span><span class="n">Country</span><span class="w"> </span><span class="n">Name</span><span class="w"> </span><span class="p">(</span><span class="mi">2</span><span class="w"> </span><span class="n">letter</span><span class="w"> </span><span class="n">code</span><span class="p">)</span><span class="w"> </span><span class="o">[</span><span class="n">AU</span><span class="o">]</span><span class="err">:</span><span class="k">NO</span><span class="w"></span>
-<span class="w">  </span><span class="k">State</span><span class="w"> </span><span class="ow">or</span><span class="w"> </span><span class="n">Province</span><span class="w"> </span><span class="n">Name</span><span class="w"> </span><span class="p">(</span><span class="k">full</span><span class="w"> </span><span class="n">name</span><span class="p">)</span><span class="w"> </span><span class="o">[</span><span class="n">Some-State</span><span class="o">]</span><span class="err">:</span><span class="n">Trondheim</span><span class="w"></span>
-<span class="w">  </span><span class="n">Locality</span><span class="w"> </span><span class="n">Name</span><span class="w"> </span><span class="p">(</span><span class="n">eg</span><span class="p">,</span><span class="w"> </span><span class="n">city</span><span class="p">)</span><span class="w"> </span><span class="err">[]:</span><span class="n">Trondheim</span><span class="w"></span>
-<span class="w">  </span><span class="n">Organization</span><span class="w"> </span><span class="n">Name</span><span class="w"> </span><span class="p">(</span><span class="n">eg</span><span class="p">,</span><span class="w"> </span><span class="n">company</span><span class="p">)</span><span class="w"> </span><span class="o">[</span><span class="n">Internet Widgits Pty Ltd</span><span class="o">]</span><span class="err">:</span><span class="n">UNINETT</span><span class="w"></span>
-<span class="w">  </span><span class="n">Organizational</span><span class="w"> </span><span class="n">Unit</span><span class="w"> </span><span class="n">Name</span><span class="w"> </span><span class="p">(</span><span class="n">eg</span><span class="p">,</span><span class="w"> </span><span class="k">section</span><span class="p">)</span><span class="w"> </span><span class="err">[]:</span><span class="w"></span>
-<span class="w">  </span><span class="n">Common</span><span class="w"> </span><span class="n">Name</span><span class="w"> </span><span class="p">(</span><span class="n">eg</span><span class="p">,</span><span class="w"> </span><span class="n">YOUR</span><span class="w"> </span><span class="n">name</span><span class="p">)</span><span class="w"> </span><span class="err">[]:</span><span class="n">dev2</span><span class="p">.</span><span class="n">andreas</span><span class="p">.</span><span class="n">feide</span><span class="p">.</span><span class="k">no</span><span class="w"></span>
-<span class="w">  </span><span class="n">Email</span><span class="w"> </span><span class="n">Address</span><span class="w"> </span><span class="err">[]:</span><span class="w"></span>
-
-<span class="w">  </span><span class="n">Please</span><span class="w"> </span><span class="n">enter</span><span class="w"> </span><span class="n">the</span><span class="w"> </span><span class="n">following</span><span class="w"> </span><span class="s1">'extra'</span><span class="w"> </span><span class="n">attributes</span><span class="w"></span>
-<span class="w">  </span><span class="k">to</span><span class="w"> </span><span class="n">be</span><span class="w"> </span><span class="n">sent</span><span class="w"> </span><span class="k">with</span><span class="w"> </span><span class="n">your</span><span class="w"> </span><span class="n">certificate</span><span class="w"> </span><span class="n">request</span><span class="w"></span>
-<span class="w">  </span><span class="n">A</span><span class="w"> </span><span class="n">challenge</span><span class="w"> </span><span class="n">password</span><span class="w"> </span><span class="err">[]:</span><span class="w"></span>
-<span class="w">  </span><span class="n">An</span><span class="w"> </span><span class="n">optional</span><span class="w"> </span><span class="n">company</span><span class="w"> </span><span class="n">name</span><span class="w"> </span><span class="err">[]:</span><span class="w"></span>
-</code></pre>
-</div>
+<p>
+ Country Name (2 letter code) [AU]:NO
+State or Province Name (full name) [Some-State]:Trondheim
+Locality Name (eg, city) []:Trondheim
+Organization Name (eg, company) [Internet Widgits Pty Ltd]:UNINETT
+Organizational Unit Name (eg, section) []:
+Common Name (eg, YOUR name) []:dev2.andreas.feide.no
+Email Address []:
+</p>
+<p>
+ Please enter the following 'extra' attributes
+to be sent with your certificate request
+A challenge password []:
+An optional company name []:
+</p>
 <p>
  <strong>
   Note
@@ -311,7 +313,7 @@ Here is an example of an openssl command to generate a new key and a self signed
  authentication module. This module does not have any dependencies, and is therefore simple to set up.
 </p>
 <p>
- After you have successfuly tested that everything is working with the simple
+ After you have successfully tested that everything is working with the simple
  <code>
   exampleauth:UserPass
  </code>
@@ -348,10 +350,10 @@ Here is an example of an openssl command to generate a new key and a self signed
  to true:
 </p>
 <div class="codehilite">
- <pre><span></span><code>    'module.enable' =&gt; [
-         'exampleauth' =&gt; true,
-         …
-    ],
+ <pre><span></span><code><span class="x">'module.enable' =&gt; [</span>
+<span class="x">    'exampleauth' =&gt; true,</span>
+<span class="x">    …</span>
+<span class="x">],</span>
 </code></pre>
 </div>
 <p>
@@ -369,20 +371,19 @@ Here is an example of an openssl command to generate a new key and a self signed
  , and hence that section is what matters and will be used.
 </p>
 <div class="codehilite">
- <pre><span></span><code><?php
-  $config = [
-    'example-userpass' => [
-      'exampleauth:UserPass',
-      'student:studentpass' =&gt; [
-        'uid' =&gt; ['student'],
-      ],
-      'employee:employeepass' =&gt; [
-        'uid' =&gt; ['employee'],
-      ],
-    ],
-  ];
-  ?&gt;
+ <pre><span></span><code><span class="cp">&lt;?php</span>
 
+<span class="nv">$config</span> <span class="o">=</span> <span class="p">[</span>
+    <span class="s1">'example-userpass'</span> <span class="o">=&gt;</span> <span class="p">[</span>
+        <span class="s1">'exampleauth:UserPass'</span><span class="p">,</span>
+        <span class="s1">'student:studentpass'</span> <span class="o">=&gt;</span> <span class="p">[</span>
+            <span class="s1">'uid'</span> <span class="o">=&gt;</span> <span class="p">[</span><span class="s1">'student'</span><span class="p">],</span>
+        <span class="p">],</span>
+        <span class="s1">'employee:employeepass'</span> <span class="o">=&gt;</span> <span class="p">[</span>
+            <span class="s1">'uid'</span> <span class="o">=&gt;</span> <span class="p">[</span><span class="s1">'employee'</span><span class="p">],</span>
+        <span class="p">],</span>
+    <span class="p">],</span>
+<span class="p">];</span>
 </code></pre>
 </div>
 <p>
@@ -439,7 +440,6 @@ Here is an example of an openssl command to generate a new key and a self signed
 <div class="codehilite">
  <pre><span></span><code><span class="x">// The SAML entity ID is the index of this config.</span>
 <span class="x">$metadata['https://example.org/saml-idp'] =&gt; [</span>
-
 <span class="x">    // The hostname of the server (VHOST) that this SAML entity will use.</span>
 <span class="x">    'host' =&gt; '__DEFAULT__',</span>
 
@@ -472,24 +472,24 @@ Here is an example of an openssl command to generate a new key and a self signed
  file we will configure an entry for Google Workspace for Education. There is already an entry for Google Workspace in the template, but we will change the domain name:
 </p>
 <div class="codehilite">
- <pre><span></span><code><span class="w">    </span><span class="cm">/*</span>
-<span class="cm">     * This example shows an example config that works with Google Workspace (G Suite / Google Apps) for education.</span>
-<span class="cm">     * What is important is that you have an attribute in your IdP that maps to the local part of the email address</span>
-<span class="cm">     * at Google Workspace. E.g. if your google account is foo.com, and you have a user with email john@foo.com, then you</span>
-<span class="cm">     * must properly configure the saml:AttributeNameID authproc-filter with the name of an attribute that for this user has the value of 'john'.</span>
-<span class="cm">     */</span><span class="w"></span>
-<span class="w">    </span><span class="err">$</span><span class="n">metadata</span><span class="o">[</span><span class="n">'https://www.google.com/a/g.feide.no'</span><span class="o">]</span><span class="w"> </span><span class="o">=&gt;</span><span class="w"> </span><span class="o">[</span><span class="n"></span>
-<span class="n">      'AssertionConsumerService'   =&gt; 'https://www.google.com/a/g.feide.no/acs', </span>
-<span class="n">      'NameIDFormat'               =&gt; 'urn:oasis:names:tc:SAML:1.1:nameid-format:emailAddress',</span>
-<span class="n">      'simplesaml.attributes'      =&gt; false,</span>
-<span class="n">      'authproc'                   =&gt; [</span>
-<span class="n">        1 =&gt; [</span>
-<span class="n">          'saml:AttributeNameID',</span>
-<span class="n">          'attribute' =&gt; 'uid',</span>
-<span class="n">          'format' =&gt; 'urn:oasis:names:tc:SAML:1.1:nameid-format:emailAddress',</span>
-<span class="n">        </span><span class="o">]</span><span class="p">,</span><span class="w"></span>
-<span class="w">      </span><span class="err">]</span><span class="p">,</span><span class="w"></span>
-<span class="w">    </span><span class="err">]</span><span class="p">;</span><span class="w"></span>
+ <pre><span></span><code><span class="x">/*</span>
+<span class="x"> * This example shows an example config that works with Google Workspace (G Suite / Google Apps) for education.</span>
+<span class="x"> * What is important is that you have an attribute in your IdP that maps to the local part of the email address</span>
+<span class="x"> * at Google Workspace. E.g. if your google account is foo.com, and you have a user with email john@foo.com, then you</span>
+<span class="x"> * must properly configure the saml:AttributeNameID authproc-filter with the name of an attribute that for this user has the value of 'john'.</span>
+<span class="x"> */</span>
+<span class="x">$metadata['https://www.google.com/a/g.feide.no'] =&gt; [</span>
+<span class="x">    'AssertionConsumerService' =&gt; 'https://www.google.com/a/g.feide.no/acs', </span>
+<span class="x">    'NameIDFormat' =&gt; 'urn:oasis:names:tc:SAML:1.1:nameid-format:emailAddress',</span>
+<span class="x">    'simplesaml.attributes' =&gt; false,</span>
+<span class="x">    'authproc' =&gt; [</span>
+<span class="x">        1 =&gt; [</span>
+<span class="x">          'saml:AttributeNameID',</span>
+<span class="x">          'attribute' =&gt; 'uid',</span>
+<span class="x">          'format' =&gt; 'urn:oasis:names:tc:SAML:1.1:nameid-format:emailAddress',</span>
+<span class="x">        ],</span>
+<span class="x">    ],</span>
+<span class="x">];</span>
 </code></pre>
 </div>
 <p>
@@ -548,8 +548,9 @@ Here is an example of an openssl command to generate a new key and a self signed
 Then select "Advanced tools":
 </p>
 <p>
+ Figure 1.
  <strong>
-  Figure 1. We go to advanced tools
+  We go to advanced tools
  </strong>
 </p>
 <p>
@@ -559,8 +560,9 @@ Then select "Advanced tools":
  Then select "Set up single sign-on (SSO)":
 </p>
 <p>
+ Figure 2.
  <strong>
-  Figure 2. We go to setup SSO
+  We go to setup SSO
  </strong>
 </p>
 <p>
@@ -568,8 +570,9 @@ Then select "Advanced tools":
  Upload a certificate, such as the googleworkspaceidp.crt created above:
 </p>
 <p>
+ Figure 3.
  <strong>
-  Figure 3. Uploading certificate
+  Uploading certificate
  </strong>
 </p>
 <p>
@@ -589,10 +592,11 @@ go to the "Federation" tab, under "SAML 2.0 IdP Metadata" select "show metadata"
  which contains the right URL to input in the field, it will look something
 like this:
 </p>
-<div class="codehilite">
- <pre><span></span><code>https://dev2.andreas.feide.no/simplesaml/saml2/idp/SSOService.php
-</code></pre>
-</div>
+<p>
+ <code>
+  https://dev2.andreas.feide.no/simplesaml/saml2/idp/SSOService.php
+ </code>
+</p>
 <p>
  You must also configure the IdP initiated Single LogOut endpoint of your server.
 You will find this in your metadata XML in the tag
@@ -601,10 +605,11 @@ You will find this in your metadata XML in the tag
  </code>
  . It will look something like:
 </p>
-<div class="codehilite">
- <pre><span></span><code>http://dev2.andreas.feide.no/simplesaml/saml2/idp/SingleLogoutService.php
-</code></pre>
-</div>
+<p>
+ <code>
+  http://dev2.andreas.feide.no/simplesaml/saml2/idp/SingleLogoutService.php
+ </code>
+</p>
 <p>
  again, using the host name of your IdP server.
 </p>
@@ -617,8 +622,9 @@ IP addresses not matching this mask will be presented with the normal Google Wor
 It is normally best to leave this field empty to enable authentication for all URLs.
 </p>
 <p>
+ Figure 4.
  <strong>
-  Figure 4. Fill out the remaining fields
+  Fill out the remaining fields
  </strong>
 </p>
 <p>
@@ -636,10 +642,11 @@ It is normally best to leave this field empty to enable authentication for all U
 <p>
  Go to the URL of your mail account for this domain, the URL is similar to the following:
 </p>
-<div class="codehilite">
- <pre><span></span><code>http://mail.google.com/a/yourgoogleappsdomain.com
-</code></pre>
-</div>
+<p>
+ <code>
+  http://mail.google.com/a/yourgoogleappsdomain.com
+ </code>
+</p>
 <p>
  replacing the last part with your own Google Workspace domain name.
 </p>
