--- a/devel/simplesamlphp-idp.html
+++ b/devel/simplesamlphp-idp.html
@@ -116,13 +116,6 @@
      <a href="#creating-a-self-signed-certificate">
       Creating a self signed certificate
      </a>
-     <ul>
-      <li>
-       <a href="#note">
-        Note
-       </a>
-      </li>
-     </ul>
     </li>
     <li>
      <a href="#configuring-the-idp">
@@ -148,13 +141,6 @@
      <a href="#testing-the-idp">
       Testing the IdP
      </a>
-     <ul>
-      <li>
-       <a href="#note_1">
-        Note
-       </a>
-      </li>
-     </ul>
     </li>
     <li>
      <a href="#support">
@@ -162,8 +148,8 @@
      </a>
     </li>
     <li>
-     <a href="#a-idp-first-setup">
-      A. IdP-first setup
+     <a href="#idp-first-setup">
+      IdP-first setup
      </a>
     </li>
    </ul>
@@ -195,7 +181,7 @@
  to them:
 </p>
 <div class="codehilite">
- <pre><span></span><code>  'enable.saml20-idp' =&gt; true,
+ <pre><span></span><code><span class="x">'enable.saml20-idp' =&gt; true,</span>
 </code></pre>
 </div>
 <h2 id="authentication-module">
@@ -383,10 +369,10 @@
  to true:
 </p>
 <div class="codehilite">
- <pre><span></span><code>    'module.enable' =&gt; [
-         'exampleauth' =&gt; true,
-         …
-    ],
+ <pre><span></span><code><span class="x">'module.enable' =&gt; [</span>
+<span class="x">    'exampleauth' =&gt; true,</span>
+<span class="x">    …</span>
+<span class="x">],</span>
 </code></pre>
 </div>
 <p>
@@ -401,18 +387,19 @@
 </p>
 <div class="codehilite">
  <pre><span></span><code><span class="cp">&lt;?php</span>
+
 <span class="nv">$config</span> <span class="o">=</span> <span class="p">[</span>
-  <span class="s1">'example-userpass'</span> <span class="o">=&gt;</span> <span class="p">[</span>
-    <span class="s1">'exampleauth:UserPass'</span><span class="p">,</span>
-    <span class="s1">'student:studentpass'</span> <span class="o">=&gt;</span> <span class="p">[</span>
-      <span class="s1">'uid'</span> <span class="o">=&gt;</span> <span class="p">[</span><span class="s1">'student'</span><span class="p">],</span>
-      <span class="s1">'eduPersonAffiliation'</span> <span class="o">=&gt;</span> <span class="p">[</span><span class="s1">'member'</span><span class="p">,</span> <span class="s1">'student'</span><span class="p">],</span>
+    <span class="s1">'example-userpass'</span> <span class="o">=&gt;</span> <span class="p">[</span>
+        <span class="s1">'exampleauth:UserPass'</span><span class="p">,</span>
+        <span class="s1">'student:studentpass'</span> <span class="o">=&gt;</span> <span class="p">[</span>
+            <span class="s1">'uid'</span> <span class="o">=&gt;</span> <span class="p">[</span><span class="s1">'student'</span><span class="p">],</span>
+            <span class="s1">'eduPersonAffiliation'</span> <span class="o">=&gt;</span> <span class="p">[</span><span class="s1">'member'</span><span class="p">,</span> <span class="s1">'student'</span><span class="p">],</span>
+        <span class="p">],</span>
+        <span class="s1">'employee:employeepass'</span> <span class="o">=&gt;</span> <span class="p">[</span>
+            <span class="s1">'uid'</span> <span class="o">=&gt;</span> <span class="p">[</span><span class="s1">'employee'</span><span class="p">],</span>
+            <span class="s1">'eduPersonAffiliation'</span> <span class="o">=&gt;</span> <span class="p">[</span><span class="s1">'member'</span><span class="p">,</span> <span class="s1">'employee'</span><span class="p">],</span>
+        <span class="p">],</span>
     <span class="p">],</span>
-    <span class="s1">'employee:employeepass'</span> <span class="o">=&gt;</span> <span class="p">[</span>
-      <span class="s1">'uid'</span> <span class="o">=&gt;</span> <span class="p">[</span><span class="s1">'employee'</span><span class="p">],</span>
-      <span class="s1">'eduPersonAffiliation'</span> <span class="o">=&gt;</span> <span class="p">[</span><span class="s1">'member'</span><span class="p">,</span> <span class="s1">'employee'</span><span class="p">],</span>
-    <span class="p">],</span>
-  <span class="p">],</span>
 <span class="p">];</span>
 </code></pre>
 </div>
@@ -444,10 +431,10 @@
  -user). The attributes for each user are configured in the array referenced by the index. So for the student user, these are:
 </p>
 <div class="codehilite">
- <pre><span></span><code>[
-  'uid' =&gt; ['student'],
-  'eduPersonAffiliation' =&gt; ['member', 'student'],
-],
+ <pre><span></span><code><span class="x">[</span>
+<span class="x">    'uid' =&gt; ['student'],</span>
+<span class="x">    'eduPersonAffiliation' =&gt; ['member', 'student'],</span>
+<span class="x">],</span>
 </code></pre>
 </div>
 <p>
@@ -471,15 +458,18 @@
  This key and certificate can be used to sign SAML messages:
 </p>
 <div class="codehilite">
- <pre><span></span><code>  openssl req -newkey rsa:3072 -new -x509 -days 3652 -nodes -out example.org.crt -keyout example.org.pem
+ <pre><span></span><code>openssl req -newkey rsa:3072 -new -x509 -days <span class="m">3652</span> -nodes -out example.org.crt -keyout example.org.pem
 </code></pre>
 </div>
 <p>
  The certificate above will be valid for 10 years.
 </p>
-<h3 id="note">
- Note
-</h3>
+<p>
+ <code>
+  Note
+ </code>
+ :
+</p>
 <p>
  SimpleSAMLphp will only work with RSA certificates. DSA certificates are not supported.
 </p>
@@ -495,29 +485,30 @@
 This is a minimal configuration:
 </p>
 <div class="codehilite">
- <pre><span></span><code><span class="w">  </span><span class="cp">&lt;?php</span>
-  <span class="nv">$metadata</span><span class="p">[</span><span class="s1">'https://example.org/saml-idp'</span><span class="p">]</span> <span class="o">=</span> <span class="p">[</span>
-      <span class="cm">/*</span>
-<span class="cm">       * The hostname for this IdP. This makes it possible to run multiple</span>
-<span class="cm">       * IdPs from the same configuration. '__DEFAULT__' means that this one</span>
-<span class="cm">       * should be used by default.</span>
-<span class="cm">       */</span>
-      <span class="s1">'host'</span> <span class="o">=&gt;</span> <span class="s1">'__DEFAULT__'</span><span class="p">,</span>
+ <pre><span></span><code><span class="cp">&lt;?php</span>
 
-      <span class="cm">/*</span>
-<span class="cm">       * The private key and certificate to use when signing responses.</span>
-<span class="cm">       * These can be stored as files in the cert-directory or retrieved</span>
-<span class="cm">       * from a database.</span>
-<span class="cm">       */</span>
-      <span class="s1">'privatekey'</span> <span class="o">=&gt;</span> <span class="s1">'example.org.pem'</span><span class="p">,</span>
-      <span class="s1">'certificate'</span> <span class="o">=&gt;</span> <span class="s1">'example.org.crt'</span><span class="p">,</span>
+<span class="nv">$metadata</span><span class="p">[</span><span class="s1">'https://example.org/saml-idp'</span><span class="p">]</span> <span class="o">=</span> <span class="p">[</span>
+    <span class="cm">/*</span>
+<span class="cm">     * The hostname for this IdP. This makes it possible to run multiple</span>
+<span class="cm">     * IdPs from the same configuration. '__DEFAULT__' means that this one</span>
+<span class="cm">     * should be used by default.</span>
+<span class="cm">     */</span>
+    <span class="s1">'host'</span> <span class="o">=&gt;</span> <span class="s1">'__DEFAULT__'</span><span class="p">,</span>
 
-      <span class="cm">/*</span>
-<span class="cm">       * The authentication source which should be used to authenticate the</span>
-<span class="cm">       * user. This must match one of the entries in config/authsources.php.</span>
-<span class="cm">       */</span>
-      <span class="s1">'auth'</span> <span class="o">=&gt;</span> <span class="s1">'example-userpass'</span><span class="p">,</span>
-  <span class="p">];</span>
+    <span class="cm">/*</span>
+<span class="cm">     * The private key and certificate to use when signing responses.</span>
+<span class="cm">     * These can be stored as files in the cert-directory or retrieved</span>
+<span class="cm">     * from a database.</span>
+<span class="cm">     */</span>
+    <span class="s1">'privatekey'</span> <span class="o">=&gt;</span> <span class="s1">'example.org.pem'</span><span class="p">,</span>
+    <span class="s1">'certificate'</span> <span class="o">=&gt;</span> <span class="s1">'example.org.crt'</span><span class="p">,</span>
+
+    <span class="cm">/*</span>
+<span class="cm">     * The authentication source which should be used to authenticate the</span>
+<span class="cm">     * user. This must match one of the entries in config/authsources.php.</span>
+<span class="cm">     */</span>
+    <span class="s1">'auth'</span> <span class="o">=&gt;</span> <span class="s1">'example-userpass'</span><span class="p">,</span>
+<span class="p">];</span>
 </code></pre>
 </div>
 <p>
@@ -549,11 +540,11 @@ We therefore recommended enabling this in new installations.
 This can be done by adding the following to the saml20-idp-hosted configuration:
 </p>
 <div class="codehilite">
- <pre><span></span><code>  'attributes.NameFormat' =&gt; 'urn:oasis:names:tc:SAML:2.0:attrname-format:uri',
-  'authproc' =&gt; [
-      // Convert LDAP names to oids.
-      100 =&gt; ['class' =&gt; 'core:AttributeMap', 'name2oid'],
-  ],
+ <pre><span></span><code><span class="x">'attributes.NameFormat' =&gt; 'urn:oasis:names:tc:SAML:2.0:attrname-format:uri',</span>
+<span class="x">'authproc' =&gt; [</span>
+<span class="x">    // Convert LDAP names to oids.</span>
+<span class="x">    100 =&gt; ['class' =&gt; 'core:AttributeMap', 'name2oid'],</span>
+<span class="x">],</span>
 </code></pre>
 </div>
 <h2 id="adding-sps-to-the-idp">
@@ -573,11 +564,12 @@ This is a minimal example of a
  metadata file for a SimpleSAMLphp SP:
 </p>
 <div class="codehilite">
- <pre><span></span><code><span class="w">  </span><span class="cp">&lt;?php</span>
-  <span class="nv">$metadata</span><span class="p">[</span><span class="s1">'https://sp.example.org/simplesaml/module.php/saml/sp/metadata.php/default-sp'</span><span class="p">]</span> <span class="o">=</span> <span class="p">[</span>
-      <span class="s1">'AssertionConsumerService'</span> <span class="o">=&gt;</span> <span class="s1">'https://sp.example.org/simplesaml/module.php/saml/sp/assertionConsumerService/default-sp'</span><span class="p">,</span>
-      <span class="s1">'SingleLogoutService'</span>      <span class="o">=&gt;</span> <span class="s1">'https://sp.example.org/simplesaml/module.php/saml/sp/singleLogoutService/default-sp'</span><span class="p">,</span>
-  <span class="p">];</span>
+ <pre><span></span><code><span class="cp">&lt;?php</span>
+
+<span class="nv">$metadata</span><span class="p">[</span><span class="s1">'https://sp.example.org/simplesaml/module.php/saml/sp/metadata.php/default-sp'</span><span class="p">]</span> <span class="o">=</span> <span class="p">[</span>
+    <span class="s1">'AssertionConsumerService'</span> <span class="o">=&gt;</span> <span class="s1">'https://sp.example.org/simplesaml/module.php/saml/sp/assertionConsumerService/default-sp'</span><span class="p">,</span>
+    <span class="s1">'SingleLogoutService'</span> <span class="o">=&gt;</span> <span class="s1">'https://sp.example.org/simplesaml/module.php/saml/sp/singleLogoutService/default-sp'</span><span class="p">,</span>
+<span class="p">];</span>
 </code></pre>
 </div>
 <p>
@@ -616,9 +608,12 @@ on the same machine. See the instructions for
  </a>
  .
 </p>
-<h3 id="note_1">
- Note
-</h3>
+<p>
+ <code>
+  Note
+ </code>
+ :
+</p>
 <p>
  When running a SimpleSAMLphp IdP and a SimpleSAMLphp SP on the same computer, the SP and IdP
  <strong>
@@ -649,8 +644,8 @@ on the same machine. See the instructions for
   </a>
  </li>
 </ul>
-<h2 id="a-idp-first-setup">
- A. IdP-first setup
+<h2 id="idp-first-setup">
+ IdP-first setup
 </h2>
 <p>
  If you do not want to start the SSO flow at the SP, you may use the IdP-first setup. To do this, redirect the user to the SSOService endpoint on the IdP with one parameter
@@ -662,10 +657,11 @@ on the same machine. See the instructions for
 <p>
  Here is an example of such a URL:
 </p>
-<div class="codehilite">
- <pre><span></span><code>https://idp.example.org/simplesaml/saml2/idp/SSOService.php?spentityid=sp.example.org
-</code></pre>
-</div>
+<p>
+ <code>
+  https://idp.example.org/simplesaml/saml2/idp/SSOService.php?spentityid=sp.example.org
+ </code>
+</p>
 <p>
  If the SP is a SimpleSAMLphp SP, you must also specify a
  <code>
@@ -684,10 +680,11 @@ The
  , or it can be sent from the IdP.
 To send the RelayState parameter from a SimpleSAMLphp IdP, specify it in the query string to SSOService.php:
 </p>
-<div class="codehilite">
- <pre><span></span><code>  https://idp.example.org/simplesaml/saml2/idp/SSOService.php?spentityid=sp.example.org&amp;RelayState=https://sp.example.org/welcome.php
-</code></pre>
-</div>
+<p>
+ <code>
+  https://idp.example.org/simplesaml/saml2/idp/SSOService.php?spentityid=sp.example.org&amp;RelayState=https://sp.example.org/welcome.php
+ </code>
+</p>
 <p>
  To set it in the SP configuration, add it to
  <code>
@@ -696,10 +693,10 @@ To send the RelayState parameter from a SimpleSAMLphp IdP, specify it in the que
  :
 </p>
 <div class="codehilite">
- <pre><span></span><code>  'default-sp' =&gt; [
-      'saml:SP',
-      'RelayState' =&gt; 'https://sp.example.org/welcome.php',
-  ],
+ <pre><span></span><code><span class="x">'default-sp' =&gt; [</span>
+<span class="x">    'saml:SP',</span>
+<span class="x">    'RelayState' =&gt; 'https://sp.example.org/welcome.php',</span>
+<span class="x">],</span>
 </code></pre>
 </div></main></body>
 </html>
