--- a/devel/simplesamlphp-metadata-extensions-rpi.html
+++ b/devel/simplesamlphp-metadata-extensions-rpi.html
@@ -95,10 +95,14 @@
     For more information about how to use the Markdown syntax, read here:
     http://daringfireball.net/projects/markdown/syntax
 -->
-<div class="codehilite">
- <pre><span></span><code><span class="o">*</span><span class="w"> </span><span class="nl">Author</span><span class="p">:</span><span class="w"> </span><span class="n">Jaime</span><span class="w"> </span><span class="n">Perez</span><span class="w"> </span><span class="o">[</span><span class="n">jaime.perez@uninett.no</span><span class="o">]</span><span class="p">(</span><span class="nl">mailto</span><span class="p">:</span><span class="n">jaime</span><span class="p">.</span><span class="n">perez</span><span class="nv">@uninett</span><span class="p">.</span><span class="k">no</span><span class="p">)</span><span class="w"></span>
-</code></pre>
-</div>
+<ul>
+ <li>
+  Author: Jaime Perez
+  <a href="mailto/jaime.perez@uninett.no.html">
+   jaime.perez@uninett.no
+  </a>
+ </li>
+</ul>
 <div class="toc">
  <ul>
   <li>
@@ -130,7 +134,7 @@ V2.0 Metadata Extensions for Registration and Publication Information
 </p>
 <p>
  This extension aims to provide information about the registrars and publishers of the metadata themselves, and it is therefore
-available throught different endpoints and modules that provide metadata all along SimpleSAMLphp. More specifically, this
+available through different endpoints and modules that provide metadata all along SimpleSAMLphp. More specifically, this
 extension can be used for:
 </p>
 <ul>
