--- a/devel/simplesamlphp-metadata-pdostoragehandler.html
+++ b/devel/simplesamlphp-metadata-pdostoragehandler.html
@@ -153,17 +153,17 @@
  You will first need to configure a PDO metadata source.
 </p>
 <div class="codehilite">
- <pre><span></span><code><span class="o">[</span><span class="n">root@simplesamlphp simplesamlphp</span><span class="o">]</span><span class="err">#</span><span class="w"> </span><span class="n">vi</span><span class="w"> </span><span class="n">config</span><span class="o">/</span><span class="n">config</span><span class="p">.</span><span class="n">php</span><span class="w"></span>
+ <pre><span></span><code><span class="o">[</span>root@simplesamlphp simplesamlphp<span class="o">]</span><span class="c1"># vi config/config.php</span>
 </code></pre>
 </div>
 <p>
  Here is an example of flatfile plus PDO:
 </p>
 <div class="codehilite">
- <pre><span></span><code>'metadata.sources' =&gt; [
-  ['type' =&gt; 'flatfile'],
-  ['type' =&gt; 'pdo'],
-],
+ <pre><span></span><code><span class="x">'metadata.sources' =&gt; [</span>
+<span class="x">    ['type' =&gt; 'flatfile'],</span>
+<span class="x">    ['type' =&gt; 'pdo'],</span>
+<span class="x">],</span>
 </code></pre>
 </div>
 <h2 id="initializing-the-database">
@@ -173,7 +173,7 @@
  Once you have configured your metadata sources to include a PDO source, you will need to initialize the database. This process will create tables in the database for each type of metadata set (saml20-idp-hosted, saml20-idp-remote, saml20-sp-remote, etc).
 </p>
 <div class="codehilite">
- <pre><span></span><code><span class="o">[</span><span class="n">root@simplesamlphp simplesamlphp</span><span class="o">]</span><span class="err">#</span><span class="w"> </span><span class="n">php</span><span class="w"> </span><span class="n">bin</span><span class="o">/</span><span class="n">initMDSPdo</span><span class="p">.</span><span class="n">php</span><span class="w"></span>
+ <pre><span></span><code><span class="o">[</span>root@simplesamlphp simplesamlphp<span class="o">]</span><span class="c1"># php bin/initMDSPdo.php</span>
 </code></pre>
 </div>
 <p>
@@ -202,7 +202,10 @@
 <p>
  entity_id                | entity_data
 -------------------------|-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
-https://openidp.feide.no | {"name":{"en":"Feide OpenIdP - guest users","no":"Feide Gjestebrukere"},"description":"Here you can login with your account on Feide RnD OpenID. If you do not already have an account on this identity provider, you can create a new one by following the create new account link and follow the instructions.","SingleSignOnService":"https:\/\/openidp.feide.no\/simplesaml\/saml2\/idp\/SSOService.php","SingleLogoutService":"https:\/\/openidp.feide.no\/simplesaml\/saml2\/idp\/SingleLogoutService.php","certFingerprint":"c9ed4dfb07caf13fc21e0fec1572047eb8a7a4cb"}
+ <code>
+  https://openidp.feide.no
+ </code>
+ | {"name":{"en":"Feide OpenIdP - guest users","no":"Feide Gjestebrukere"},"description":"Here you can login with your account on Feide RnD OpenID. If you do not already have an account on this identity provider, you can create a new one by following the create new account link and follow the instructions.","SingleSignOnService":"https:\/\/openidp.feide.no\/simplesaml\/saml2\/idp\/SSOService.php","SingleLogoutService":"https:\/\/openidp.feide.no\/simplesaml\/saml2\/idp\/SingleLogoutService.php","certFingerprint":"c9ed4dfb07caf13fc21e0fec1572047eb8a7a4cb"}
 </p>
 <p>
  There is an included script in the
@@ -215,7 +218,7 @@ https://openidp.feide.no | {"name":{"en":"Feide OpenIdP - guest users","no":"Fei
  To import all flatfile metadata files into the PDO database, run the following script
 </p>
 <div class="codehilite">
- <pre><span></span><code><span class="o">[</span><span class="n">root@simplesamlphp simplesamlphp</span><span class="o">]</span><span class="err">#</span><span class="w"> </span><span class="n">php</span><span class="w"> </span><span class="n">bin</span><span class="o">/</span><span class="n">importPdoMetadata</span><span class="p">.</span><span class="n">php</span><span class="w"></span>
+ <pre><span></span><code><span class="o">[</span>root@simplesamlphp simplesamlphp<span class="o">]</span><span class="c1"># php bin/importPdoMetadata.php</span>
 </code></pre>
 </div>
 <p>
