--- a/devel/simplesamlphp-upgrade-notes-1.10.html
+++ b/devel/simplesamlphp-upgrade-notes-1.10.html
@@ -90,8 +90,13 @@
 </header><main><h1 id="upgrade-notes-for-simplesamlphp-110">
  Upgrade notes for SimpleSAMLphp 1.10
 </h1>
-<div class="codehilite">
- <pre><span></span><code><span class="o">*</span> <span class="nv">The</span> <span class="nv">default</span> <span class="nv">encryption</span> <span class="nv">key</span> <span class="nv">padding</span> <span class="nv">scheme</span> <span class="nv">has</span> <span class="nv">been</span> <span class="nv">changed</span> <span class="nv">to</span> `<span class="nv">http</span>:<span class="o">//</span><span class="nv">www</span>.<span class="nv">w3</span>.<span class="nv">org</span><span class="o">/</span><span class="mi">2001</span><span class="o">/</span><span class="mi">04</span><span class="o">/</span><span class="nv">xmlenc</span>#<span class="nv">rsa</span><span class="o">-</span><span class="nv">oaep</span><span class="o">-</span><span class="nv">mgf1p</span>`. <span class="nv">This</span> <span class="nv">may</span> <span class="nv">cause</span> <span class="nv">problems</span> <span class="k">if</span> <span class="nv">the</span> <span class="nv">recipient</span> <span class="nv">of</span> <span class="nv">messages</span> <span class="k">do</span> <span class="nv">not</span> <span class="nv">support</span> <span class="nv">this</span> <span class="nv">padding</span> <span class="nv">scheme</span>.
-</code></pre>
-</div></main></body>
+<ul>
+ <li>
+  The default encryption key padding scheme has been changed to
+  <code>
+   http://www.w3.org/2001/04/xmlenc#rsa-oaep-mgf1p
+  </code>
+  . This may cause problems if the recipient of messages do not support this padding scheme.
+ </li>
+</ul></main></body>
 </html>
