--- a/devel/simplesamlphp-upgrade-notes-1.12.html
+++ b/devel/simplesamlphp-upgrade-notes-1.12.html
@@ -90,8 +90,9 @@
 </header><main><h1 id="upgrade-notes-for-simplesamlphp-112">
  Upgrade notes for SimpleSAMLphp 1.12
 </h1>
-<div class="codehilite">
- <pre><span></span><code>* PHP version 5.3 is now required.
-</code></pre>
-</div></main></body>
+<ul>
+ <li>
+  PHP version 5.3 is now required.
+ </li>
+</ul></main></body>
 </html>
