--- a/devel/simplesamlphp-upgrade-notes-1.13.html
+++ b/devel/simplesamlphp-upgrade-notes-1.13.html
@@ -90,11 +90,24 @@
 </header><main><h1 id="upgrade-notes-for-simplesamlphp-113">
  Upgrade notes for SimpleSAMLphp 1.13
 </h1>
-<div class="codehilite">
- <pre><span></span><code><span class="o">*</span> <span class="nv">The</span> <span class="nv">RSA_1</span>.<span class="mi">5</span> <span class="ss">(</span><span class="nv">RSA</span> <span class="nv">with</span> <span class="nv">PKCS</span><span class="sc">#1</span> <span class="nv">v1</span>.<span class="mi">5</span> <span class="nv">padding</span><span class="ss">)</span> <span class="nv">algorithm</span> <span class="nv">is</span> <span class="nv">now</span> <span class="nv">longer</span> <span class="nv">allowed</span> <span class="nv">by</span> <span class="nv">default</span>. <span class="nv">This</span> <span class="nv">means</span> <span class="nv">messages</span> <span class="nv">received</span>
-<span class="nv">that</span> <span class="nv">use</span> <span class="nv">this</span> <span class="nv">algorithm</span> <span class="nv">will</span> <span class="nv">fail</span> <span class="nv">to</span> <span class="nv">decrypt</span>.
-<span class="o">*</span> <span class="nv">Several</span> <span class="nv">functions</span>, <span class="nv">classes</span> <span class="nv">and</span> <span class="nv">interfaces</span> <span class="nv">are</span> <span class="nv">now</span> <span class="nv">deprecated</span>. <span class="nv">Please</span> <span class="nv">check</span> <span class="nv">your</span> <span class="nv">code</span> <span class="k">if</span> <span class="nv">you</span> <span class="nv">are</span> <span class="nv">using</span> <span class="nv">the</span> <span class="nv">API</span>.
-<span class="o">*</span> <span class="nv">A</span> <span class="nv">workaround</span> <span class="nv">related</span> <span class="nv">to</span> <span class="nv">performance</span> <span class="nv">issues</span> <span class="nv">when</span> <span class="nv">processing</span> <span class="nv">large</span> <span class="nv">metadata</span> <span class="nv">sets</span> <span class="nv">was</span> <span class="nv">included</span> <span class="nv">in</span> <span class="o">**</span><span class="mi">1</span>.<span class="mi">13</span>.<span class="mi">2</span><span class="o">**</span>. <span class="o">**</span><span class="nv">This</span> <span class="nv">workaround</span> <span class="nv">is</span> <span class="nv">experimental</span> <span class="nv">and</span> <span class="nv">could</span> <span class="nv">have</span> <span class="nv">unexpected</span> <span class="nv">side</span> <span class="nv">effects</span><span class="o">**</span>.
-</code></pre>
-</div></main></body>
+<ul>
+ <li>
+  The RSA_1.5 (RSA with PKCS#1 v1.5 padding) algorithm is now longer allowed by default. This means messages received
+  that use this algorithm will fail to decrypt.
+ </li>
+ <li>
+  Several functions, classes and interfaces are now deprecated. Please check your code if you are using the API.
+ </li>
+ <li>
+  A workaround related to performance issues when processing large metadata sets was included in
+  <strong>
+   1.13.2
+  </strong>
+  .
+  <strong>
+   This workaround is experimental and could have unexpected side effects
+  </strong>
+  .
+ </li>
+</ul></main></body>
 </html>
