--- a/devel/simplesamlphp-upgrade-notes-1.16.html
+++ b/devel/simplesamlphp-upgrade-notes-1.16.html
@@ -91,7 +91,7 @@
  Upgrade notes for SimpleSAMLphp 1.16
 </h1>
 <p>
- The default signature algoritm is now SHA-256 (SHA-1 has been considered
+ The default signature algorithm is now SHA-256 (SHA-1 has been considered
 obsolete since 2014). For entities that need it, you can switch back to
 SHA-1 by setting the
  <code>
