--- a/devel/simplesamlphp-upgrade-notes-1.17.html
+++ b/devel/simplesamlphp-upgrade-notes-1.17.html
@@ -105,7 +105,7 @@ AuthnRequests by setting NameIDPolicy to
  <code>
   false
  </code>
- . The prefered way is
+ . The preferred way is
 to configure it as an array
  <code>
   [ 'Format' =&gt; format, 'AllowCreate' =&gt; true/false ]
@@ -129,21 +129,21 @@ equally, but the code examples and config templates look slightly different.
 The following are equivalent:
 </p>
 <div class="codehilite">
- <pre><span></span><code><span class="w">  </span><span class="o">//</span><span class="w"> </span><span class="nt">Old</span><span class="w"> </span><span class="nt">style</span><span class="w"> </span><span class="nt">array</span><span class="w"> </span><span class="nt">syntax</span><span class="w"></span>
-<span class="w">  </span><span class="o">$</span><span class="nt">config</span><span class="w"> </span><span class="o">=</span><span class="w"> </span><span class="nt">array</span><span class="o">(</span><span class="w"></span>
-<span class="w">      </span><span class="s1">'authproc'</span><span class="w"> </span><span class="o">=&gt;</span><span class="w"> </span><span class="nt">array</span><span class="o">(</span><span class="w"></span>
-<span class="w">          </span><span class="nt">60</span><span class="w"> </span><span class="o">=&gt;</span><span class="w"> </span><span class="s1">'class:etc'</span><span class="w"></span>
-<span class="w">      </span><span class="o">),</span><span class="w"></span>
-<span class="w">      </span><span class="s1">'other example'</span><span class="w"> </span><span class="o">=&gt;</span><span class="w"> </span><span class="nt">1</span><span class="w"></span>
-<span class="w">  </span><span class="o">);</span><span class="w"></span>
+ <pre><span></span><code><span class="x">// Old style array syntax</span>
+<span class="x">$config = array(</span>
+<span class="x">    'authproc' =&gt; array(</span>
+<span class="x">        60 =&gt; 'class:etc'</span>
+<span class="x">    ),</span>
+<span class="x">    'other example' =&gt; 1</span>
+<span class="x">);</span>
 
-<span class="w">  </span><span class="o">//</span><span class="w"> </span><span class="nt">Current</span><span class="w"> </span><span class="nt">style</span><span class="w"> </span><span class="nt">array</span><span class="w"> </span><span class="nt">syntax</span><span class="w"></span>
-<span class="w">  </span><span class="o">$</span><span class="nt">config</span><span class="w"> </span><span class="o">=</span><span class="w"> </span><span class="cp">[</span><span class="w"></span>
-<span class="w">      </span><span class="s1">'authproc'</span><span class="w"> </span><span class="o">=&gt;</span><span class="w"> </span><span class="err">[</span><span class="w"></span>
-<span class="w">          </span><span class="mi">60</span><span class="w"> </span><span class="o">=&gt;</span><span class="w"> </span><span class="s1">'class:etc'</span><span class="w"></span>
-<span class="w">      </span><span class="cp">]</span><span class="o">,</span><span class="w"></span>
-<span class="w">      </span><span class="s1">'other example'</span><span class="w"> </span><span class="o">=&gt;</span><span class="w"> </span><span class="nt">1</span><span class="w"></span>
-<span class="w">  </span><span class="o">];</span><span class="w"></span>
+<span class="x">// Current style array syntax</span>
+<span class="x">$config = [</span>
+<span class="x">    'authproc' =&gt; [</span>
+<span class="x">        60 =&gt; 'class:etc'</span>
+<span class="x">    ],</span>
+<span class="x">    'other example' =&gt; 1</span>
+<span class="x">];</span>
 </code></pre>
 </div></main></body>
 </html>
